#43 - updated translations for all other languages
Signed-off-by: julianbollig <julian.bollig@tngtech.com>

--- a/WebUI/src/assets/i18n/de.json
+++ b/WebUI/src/assets/i18n/de.json
@@ -7,8 +7,8 @@
   "COM_RESTORE": "Defaults wiederherstellen",
   "COM_SD_PROMPT": "Prompt für Bildgenerierung",
   "COM_LLM_PROMPT": "Prompt für Antwortgenerierung",
-  "COM_LLM_HF_PROMPT": "<Namespace>/<Repo-Name>",
-  "COM_LLM_HF_PROMPT_GGUF": "<Namespace>/<Repo-Name>/<Dateipfad>",
+  "COM_LLM_HF_PROMPT": "<namespace>/<repo_name>",
+  "COM_LLM_HF_PROMPT_GGUF": "<namespace>/<repo_name>/<file_path>",
   "COM_CLICK_UPLOAD": "- Klicken Sie zum Hochladen eines Bildes -",
   "COM_GENERATE": "Generieren",
   "COM_GENERATING": "Generierung",
@@ -151,8 +151,8 @@
   "ANSWER_RAG_OPEN_DIALOG": "Datei-Uploader öffnen",
   "REQUEST_LLM_MODEL_NAME": "Fügen Sie ein Modell Ihrer Wahl von huggingface.co hinzu",
   "REQUEST_LLM_MODEL_DESCRIPTION": "Sie können ein Modell-Repository mit folgender Syntax herunterladen",
-  "REQUEST_LLM_MODEL_EXAMPLE": "<Namespace>/<Repo-Name>, z.B. 'facebook/opt-1.3b'",
-  "REQUEST_LLM_SINGLE_EXAMPLE": "<Namespace>/<Repo-Name>/<Dateipfad>, z.B. 'microsoft/Phi-3-mini-4k-instruct-gguf/Phi-3-mini-4k-instruct-q4.gguf'",
+  "REQUEST_LLM_MODEL_EXAMPLE": "<namespace>/<repo_name>, z.B. 'facebook/opt-1.3b'",
+  "REQUEST_LLM_SINGLE_EXAMPLE": "<namespace>/<repo_name>/<file_path>, z.B. 'microsoft/Phi-3-mini-4k-instruct-gguf/Phi-3-mini-4k-instruct-q4.gguf'",
   "REQUEST_LLM_MODEL_DISCLAIMER_1": "Hinweis: Nicht jedes Modell auf huggingface.co ist für die Aufgabe geeignet, die Sie ausführen möchten.",
   "REQUEST_LLM_MODEL_DISCLAIMER_2": "Lesen Sie die Modell-Einführung und die Modell-Anforderungen sorgfältig durch, bevor Sie es herunterladen.",
   "DOWNLOADER_CONFRIM_TIP": "Es fehlen eine oder mehrere erforderliche Modelle zum Ausführen. Möchten Sie die Modelle, die unten aufgeführt sind, herunterladen?",
