--- a/WebUI/src/assets/i18n/es.json
+++ b/WebUI/src/assets/i18n/es.json
@@ -5,10 +5,10 @@
   "COM_CLOSE": "Cerrar",
   "COM_ADD": "Agregar",
   "COM_RESTORE": "Restaurar valores predeterminados",
-  "COM_SD_PROMPT": "Solicitud de entrada para generar imagen",
-  "COM_LLM_PROMPT": "Solicitud de entrada para generar respuesta",
-  "COM_LLM_HF_PROMPT": "<namespace>/<nombre del repositorio>",
-  "COM_LLM_HF_PROMPT_GGUF": "<namespace>/<nombre del repositorio>/<ruta del archivo>",
+  "COM_SD_PROMPT": "Prompt para generar imagen",
+  "COM_LLM_PROMPT": "Prompt para generar respuesta",
+  "COM_LLM_HF_PROMPT": "<namespace>/<repo_name>",
+  "COM_LLM_HF_PROMPT_GGUF": "<namespace>/<repo_name>/<file_path>",
   "COM_CLICK_UPLOAD": "- Haga clic para cargar la imagen -",
   "COM_GENERATE": "Generar",
   "COM_GENERATING": "Generando",
@@ -52,9 +52,9 @@
   "SETTINGS_THEME": "Tema",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "El modo HD puede resultar en un rendimiento más lento que el normal en sistemas con menos de 12 GB de VRAM o 24 GB de memoria del sistema para PCs Intel Core Ultra",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "El uso del modo de flujo de trabajo requiere la instalación de ComfyUI. Esta es una componente opcional que se puede instalar en la configuración de AI Playground",
-  "SETTINGS_MODEL_WORKFLOW_COMFYUI_DOWNLOADING": "Instalación en curso...",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_DOWNLOADING": "Instalación en progreso...",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_COMPLETED": "Instalación exitosa",
-  "SETTINGS_MODEL_WORKFLOW_COMFYUI_ERROR": "Instalación fallida debido a",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_ERROR": "Instalación fallida, debido a",
   "SETTINGS_TAB_IMAGE": "Imagen",
   "SETTINGS_TAB_BASIC": "Configuración básica",
   "SETTINGS_TAB_MODEL": "Modelos",
@@ -71,16 +71,16 @@
   "SETTINGS_MODEL_QUALITY_MANUAL": "Manual",
   "SETTINGS_MODEL_ADJUSTABLE_OPTIONS": "Opciones ajustables",
   "SETTINGS_MODEL_MANUAL_OPTIONS": "Opciones manuales",
-  "SETTINGS_MODEL_NEGATIVE_PROMPT": "Solicitud negativa",
-  "SETTINGS_MODEL_SEED": "Semilla",
+  "SETTINGS_MODEL_NEGATIVE_PROMPT": "Prompt negativo",
+  "SETTINGS_MODEL_SEED": "Seed",
   "SETTINGS_MODEL_GENERATE_NUMBER": "Número de imágenes a generar",
   "SETTINGS_MODEL_LLM_MODEL": "Modelo de lenguaje grande",
   "SETTINGS_MODEL_IMAGE_PREVIEW": "Vista previa de la imagen",
   "SETTINGS_MODEL_SAFE_CHECK": "Comprobación de seguridad",
   "SETTINGS_MODEL_IMAGE_MODEL": "Modelo de imagen",
   "SETTINGS_MODEL_INPAINT_MODEL": "Modelo de inpaint/outpaint",
-  "SETTINGS_MODEL_IMAGE_WIDTH": "Ancho de la imagen",
-  "SETTINGS_MODEL_IMAGE_HEIGHT": "Altura de la imagen",
+  "SETTINGS_MODEL_IMAGE_WIDTH": "Ancho",
+  "SETTINGS_MODEL_IMAGE_HEIGHT": "Alto",
   "SETTINGS_MODEL_IMAGE_STEPS": "Pasos",
   "SETTINGS_MODEL_IMAGE_CFG": "CFG",
   "SETTINGS_MODEL_LORA": "Lora",
@@ -116,7 +116,7 @@
   "TAB_LEARN_MORE": "Aprender más",
   "ENHANCE_INPUT_IMAGE_REQUIRED": "Establecer la imagen de entrada antes de generarla",
   "ENHANCE_UPSCALE": "Aumentar resolución",
-  "ENHANCE_IMAGE_PROMPT": "Solicitud de imagen",
+  "ENHANCE_IMAGE_PROMPT": "Prompt de imagen",
   "ENHANCE_INPAINT": "Inpaint",
   "ENHANCE_OUTPAINT": "Outpaint",
   "ENHANCE_UPSCALE_SCALE": "Aumentar resolución",
@@ -125,7 +125,7 @@
   "ENHANCE_UPSCALE_VARIATION": "Variación",
   "ENHANCE_UPSCALE_VARIATION_NONE": "Ninguna",
   "ENHANCE_UPSCALE_VARIATION_DISABLE": "Sutil",
-  "ENHANCE_UPSCALE_VARIATION_STRONG": "Denso",
+  "ENHANCE_UPSCALE_VARIATION_STRONG": "Fuerte",
   "ENHANCE_INPAINT_TYPE": "Tipo",
   "ENHANCE_INPAINT_FILL": "Rellenar con algo nuevo",
   "ENHANCE_INPAINT_FIX": "Ajustar y reparar el área seleccionada",
@@ -135,25 +135,25 @@
   "ENHANCE_OUTPAINT_DIRECTION": "Dirección",
   "ENHANCE_PREVIEW_BEFORE_PROCESS": "Antes del proceso",
   "ENHANCE_PREVIEW_AFTER_PROCESS": "Después del proceso",
-  "ENHANCE_IMAGE_PROMPT_TIP": "Describe cómo quieres que se estilice la imagen. Incluye las descripciones de la imagen original que deseas conservar y las descripciones de lo que quieres que sea diferente. Ajusta el control deslizante de influencia para aumentar o disminuir la influencia que tu comando tiene sobre el resultado final",
-  "ENHANCE_INPAINT_TIP": "Utiliza la herramienta lápiz para seleccionar un área. Describe en el comando lo que deseas corregir o rellenar. Selecciona la opción Corregir o Rellenar, luego ajusta el nivel de influencia del comando",
-  "ENHANCE_OUTPAINT_TIP": "Selecciona la dirección en la que deseas expandir, ajusta el valor de reducción de ruido si es necesario e ingresa una palabra en el cuadro de texto. Se generará la imagen expandida",
-  "ENHANCE_UPSCALE_TIP": "Carga la imagen que debe ser manipulada, selecciona el factor de amplificación, ajusta el ancho de ruido (si es inferior a 0,1, el contenido de la imagen no cambiará, pero el tamaño se aumentará de todos modos), ingresa la palabra solicitada en el cuadro de texto para generar la imagen ampliada",
+  "ENHANCE_IMAGE_PROMPT_TIP": "Describe cómo quieres que se estilice la imagen. Incluye las descripciones de la imagen original que deseas conservar y las descripciones de lo que quieres que sea diferente. Ajusta el control deslizante de reducción de ruido para aumentar o disminuir la influencia que tu prompt tiene sobre el resultado final",
+  "ENHANCE_INPAINT_TIP": "Utiliza la herramienta lápiz para seleccionar un área. Describe en el prompt lo que deseas corregir o rellenar. Selecciona la opción Corregir o Rellenar, luego ajusta el nivel de influencia del prompt",
+  "ENHANCE_OUTPAINT_TIP": "Selecciona la dirección en la que deseas expandir, ajusta la fuerza de reducción de ruido si es necesario e ingresa un prompt en el cuadro de texto. Se generará la imagen expandida",
+  "ENHANCE_UPSCALE_TIP": "Carga la imagen que debe ser manipulada, selecciona el factor de amplificación, ajusta la fuerza de reducción de ruido (si es inferior a 0.1, el contenido de la imagen no cambiará, pero el tamaño se aumentará), ingresa el prompt en el cuadro de texto para generar la imagen ampliada",
   "ERROR_UNSUPPORTED_IMAGE_TYPE": "Solo se admiten los formatos de imagen PNG, JPG, GIF y BMP",
   "ANSWER_USER_NAME": "Tú",
-  "ANSWER_AI_NAME": "Playground (Zona de pruebas)",
+  "ANSWER_AI_NAME": "Playground",
   "ANSWER_NEW_CONVERSATION": "Nueva conversación",
-  "ANSWER_ERROR_NOT_PROMPT": "Por favor, ingresa el comando",
+  "ANSWER_ERROR_NOT_PROMPT": "Por favor, ingresa el prompt",
   "ANSWER_ERROR_CLEAR_SESSION": "Borrar el historial del chat",
-  "INCREASE_FONT_SIZE": "Aumentar tamaño de fuente",
-  "DECREASE_FONT_SIZE": "Disminuir tamaño de fuente",
+  "INCREASE_FONT_SIZE": "Aumentar tamaño de texto",
+  "DECREASE_FONT_SIZE": "Disminuir tamaño de texto",
   "ANSWER_RAG_ENABLE": "Activar consulta de archivos",
   "ANSWER_RAG_OPEN_DIALOG": "Abrir cargador de archivos",
   "REQUEST_LLM_MODEL_NAME": "Añadir un modelo de tu elección desde huggingface.co",
   "REQUEST_LLM_MODEL_DESCRIPTION": "Puedes descargar un repositorio de modelos con la sintaxis",
-  "REQUEST_LLM_MODEL_EXAMPLE": "<namespace>/<nombre del repositorio>, por ejemplo 'facebook/opt-1.3b'",
-  "REQUEST_LLM_SINGLE_EXAMPLE": "<namespace>/<nombre del repositorio>/<ruta del archivo>, por ejemplo 'microsoft/Phi-3-mini-4k-instruct-gguf/Phi-3-mini-4k-instruct-q4.gguf'",
-  "REQUEST_LLM_MODEL_DISCLAIMER_1": "Nota: No todos los modelos en huggingface.co son adecuados para la tarea que deseas realizar",
+  "REQUEST_LLM_MODEL_EXAMPLE": "<namespace>/<repo_name>, por ejemplo 'facebook/opt-1.3b'",
+  "REQUEST_LLM_SINGLE_EXAMPLE": "<namespace>/<repo_name>/<file_path>, por ejemplo 'microsoft/Phi-3-mini-4k-instruct-gguf/Phi-3-mini-4k-instruct-q4.gguf'",
+  "REQUEST_LLM_MODEL_DISCLAIMER_1": "NOTA: No todos los modelos en huggingface.co son adecuados para la tarea que deseas realizar",
   "REQUEST_LLM_MODEL_DISCLAIMER_2": "Lee cuidadosamente la introducción del modelo y los requisitos antes de descargar",
   "DOWNLOADER_CONFRIM_TIP": "Te faltan uno o más modelos necesarios para la ejecución. ¿Deseas descargar los modelos listados a continuación?",
   "DOWNLOADER_MODEL": "Modelo",
@@ -167,23 +167,23 @@
   "DOWNLOADER_ACCESS_INFO": "No tienes acceso a algunos de los modelos que deseas descargar",
   "DOWNLOADER_GATED_ACCEPT": "Algunos de los modelos tienen acceso restringido. Por favor, visita la página de información del modelo y solicita acceso",
   "DOWNLOADER_ACCESS_ACCEPT": "Los modelos inaccesibles no serán descargados",
-  "DOWNLOADER_REASON": "Motivo",
+  "DOWNLOADER_REASON": "Tipo",
   "DOWNLOADER_TERMS": "Visitar",
-  "DOWNLOADER_LICENSE": "Licencia",
-  "DOWNLOADER_CONFLICT": "Otra actividad de descarga está en curso y no se puede iniciar una nueva. Puedes cancelar la actividad de descarga actual e iniciar una nueva",
-  "DOWNLOADER_TERMS_TIP": "He revisado las tarjetas del modelo y las licencias. Acepto todos los términos y condiciones. Me gustaría descargar los modelos de terceros",
+  "DOWNLOADER_LICENSE": "Términos",
+  "DOWNLOADER_CONFLICT": "Otra descarga está en curso y no se puede iniciar una nueva. Puedes cancelar la descarga actual e iniciar una nueva",
+  "DOWNLOADER_TERMS_TIP": "He revisado las tarjetas y licencias del modelo. Acepto todos los términos y condiciones y deseo descargar los modelos de terceros",
   "DOWNLOADER_FOR_ANSWER_GENERATE": "Modelo de respuesta",
   "DOWNLOADER_FOR_RAG_QUERY": "Modelo Embed RAG",
   "DOWNLOADER_FOR_IMAGE_GENERATE": "Modelo de imagen",
-  "DOWNLOADER_FOR_INAPINT_GENERATE": "Modelo Inpaint/OutPaint",
-  "DOWNLOADER_FOR_IMAGE_PREVIEW": "Modelo de vista previa de imagen",
-  "DOWNLOADER_FOR_IMAGE_UPSCALE": "Modelo de imagen aumentada",
+  "DOWNLOADER_FOR_INAPINT_GENERATE": "Modelo Inpaint/Outpaint",
+  "DOWNLOADER_FOR_IMAGE_PREVIEW": "Modelo de vista previa",
+  "DOWNLOADER_FOR_IMAGE_UPSCALE": "Modelo de aumento de resolución",
   "DOWNLOADER_FOR_IMAGE_LORA": "Modelo de imagen rápida",
   "DOWNLOADER_DONWLOAD_TASK_PROGRESS": "Descargas del modelo completadas",
   "RAG_FILE_TOTAL_FORMAT": "Archivos totales: {total}",
   "RAG_DRAG_UPLOAD": "Arrastra los archivos para cargar",
-  "RAG_DRAG_UPLOAD_UNSUPPORTED": "El programa actual se ejecuta con privilegios de administrador. Debido a las limitaciones de UAC de Windows, no es posible utilizar la carga mediante arrastre. Usa el botón de arriba \"Agregar\" para cargar los archivos",
-  "RAG_UPLOAD_MIME_TYPE": "Tipos de archivo admitidos: \n\tText Doc: .txt .md\n\tOffice Doc: .doc(x)\n\tPDF Doc: .pdf",
+  "RAG_DRAG_UPLOAD_UNSUPPORTED": "El programa actual se ejecuta con privilegios de administrador. Debido a las limitaciones de UAC de Windows, no es posible utilizar la carga mediante arrastre. Usa el botón Agregar en la parte superior para cargar archivos",
+  "RAG_UPLOAD_MIME_TYPE": "Tipos de archivo admitidos:\n\tText Doc: .txt .md\n\tOffice Doc: .doc(x)\n\tPDF Doc: .pdf",
   "RAG_ENABLE_TIP": "Responder solo a los archivos cargados",
   "RAG_UPLOAD_TYPE_ERROR": "El archivo cargado contiene un tipo de archivo no admitido, que ha sido excluido automáticamente",
   "RAG_UPLOAD_FILE_EXISTS": "El archivo cargado {filename} ya existe",
@@ -200,8 +200,8 @@
   "ERROR_ALREADY_IN_MODELS": "El modelo especificado ya está en la lista",
   "ERROR_ENHANCE_IMAGE_NOT_SET": "Configura la imagen de entrada a generar",
   "ERROR_UNFOUND_GRAPHICS": "Si no se detecta el hardware necesario en el dispositivo, el programa se cerrará al hacer clic en OK",
-  "ERROR_PYTHON_BACKEND_INIT": "Inicialización del backend de Python fallida",
-  "ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "La inicialización del backend de inferencia de inteligencia artificial ha fallado. Por favor, intenta reiniciar la aplicación. Si el problema persiste, puedes verificar los detalles para obtener más información sobre el error",
+  "ERROR_PYTHON_BACKEND_INIT": "Inicialización del backend fallida",
+  "ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "La inicialización del backend de inferencia de IA ha fallado. Por favor, intenta reiniciar la aplicación. Si el problema persiste, puedes revisar los Detalles para obtener más información sobre el error",
   "ERROR_PYTHON_BACKEND_INIT_DETAILS": "Detalles",
   "ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "Abrir registro",
   "WARNING_MODEL_TYPE_WRONG": "El tipo de modelo no parece corresponder a los requisitos. ¿Estás seguro de que deseas continuar?",
@@ -216,21 +216,21 @@
   "BACKEND_ACTION": "Acción",
   "BACKEND_REQUIRED": "Necesario",
   "BACKEND_OPTIONAL": "Opcional",
-  "BACKEND_REQUIRED_COMPONENTS_MESSAGE": "Antes de que puedas utilizar AI Playground, debes descargar algunos componentes adicionales. Asegúrate de tener una conexión a Internet estable y sin límites",
-  "BACKEND_OPTIONAL_COMPONENTS_MESSAGE": "Los componentes opcionales no son necesarios para que AI Playground funcione, pero ofrecen funciones alternativas. Si deseas utilizarlos, haz clic en los botones de información para familiarizarte con sus términos y condiciones antes de activarlos",
-  "BACKEND_TERMS_AND_CONDITIONS": "* He revisado el componente opcional. Acepto todos los términos y condiciones y deseo descargar y activar el software de terceros, si corresponde",
+  "BACKEND_REQUIRED_COMPONENTS_MESSAGE": "Antes de que puedas utilizar AI Playground, necesitamos descargar algunos componentes adicionales. Asegúrate de tener una conexión a Internet estable y sin límites de datos",
+  "BACKEND_OPTIONAL_COMPONENTS_MESSAGE": "Los componentes opcionales no son necesarios para que AI Playground funcione, pero proporcionan funciones alternativas. Si deseas utilizarlos, haz clic en los botones de información para familiarizarte con sus términos y condiciones antes de activarlos",
+  "BACKEND_TERMS_AND_CONDITIONS": "* He revisado el componente opcional. Acepto todos los términos y condiciones y deseo descargar y activar el software de terceros si corresponde",
   "BACKEND_STATUS_RUNNING": "En ejecución",
   "BACKEND_STATUS_STOPPING": "Deteniendo",
   "BACKEND_STATUS_STARTING": "Iniciando",
   "BACKEND_STATUS_INSTALLED": "Instalado",
   "BACKEND_STATUS_NOT_INSTALLED": "No instalado",
-  "BACKEND_STATUS_INSTALLING": "Instalando",
+  "BACKEND_STATUS_INSTALLING": "Instalando...",
   "BACKEND_STATUS_FAILED": "Fallido",
   "SETTINGS_IMAGE_MODE": "Modo",
   "SETTINGS_IMAGE_WORKFLOW": "Flujo de trabajo",
   "SETTINGS_IMAGE_DEFAULT": "Predeterminado",
   "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "Imagen de referencia",
-  "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "Prefijo del nombre del archivo",
+  "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "Prefijo del nombre de archivo",
   "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - Umbral bajo",
   "SETTINGS_IMAGE_COMFY_CANNY_HIGH_THRESHOLD": "Canny - Umbral alto",
   "SETTINGS_IMAGE_COMFY_ACTIVATE_FACESWAP": "Activar FaceSwap",
@@ -239,8 +239,8 @@
   "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "Nueva imagen de rostro",
   "WORKFLOW_RELOAD_INFO": "Recargar flujos de trabajo desde el disco",
   "WORKFLOW_DOWNLOAD_INFO": "Descargar los flujos de trabajo más recientes y respaldar los existentes",
-  "WORKFLOW_HIGH_VRAM_INFO": "Este modelo requiere mucha memoria de video. Reduce la resolución y/o reinicia el backend de ComfyUI si experimentas un rendimiento pobre",
-  "WORKFLOW_HIGH_VRAM_WARNING": "Se requiere mucha memoria de video",
+  "WORKFLOW_HIGH_VRAM_INFO": "Este modelo requiere mucha VRAM. Reduce la resolución y/o reinicia el backend de ComfyUI si experimentas bajo rendimiento",
+  "WORKFLOW_HIGH_VRAM_WARNING": "alta VRAM requerida",
   "LOADING_VERIFYING_BACKENDS": "Verificando backends",
   "LOADING_AI_PLAYGROUND_LOADING": "Cargando AI Playground"
 }
