--- a/WebUI/src/assets/i18n/ko.json
+++ b/WebUI/src/assets/i18n/ko.json
@@ -3,21 +3,27 @@
   "COM_SETTINGS": "설정",
   "COM_MINI": "최소화",
   "COM_CLOSE": "닫기",
+  "COM_ADD": "추가",
   "COM_RESTORE": "기본값으로 초기화",
   "COM_SD_PROMPT": "프롬프트를 입력하여 이미지를 생성",
   "COM_LLM_PROMPT": "프롬프트를 입력하여 답변을 생성",
+  "COM_LLM_HF_PROMPT": "<namespace>/<repo_name>",
+  "COM_LLM_HF_PROMPT_GGUF": "<namespace>/<repo_name>/<file_path>",
   "COM_CLICK_UPLOAD": "- 클릭하여 이미지 업로드 -",
   "COM_GENERATE": "생성",
   "COM_GENERATING": "생성중",
   "COM_HISTORY": "히스토리",
-  "COM_POST_TO_ENHANCE_PROCESS": "향상 대기열로 보내기",
+  "COM_POST_TO_ENHANCE_PROCESS": "향상 프로세스로 전송",
   "COM_ZOOM_IN": "원본 크기로 보기",
   "COM_COPY": "복사",
   "COM_COPY_SUCCESS_TIP": "복사 성공",
   "COM_APPLY": "적용",
   "COM_DOWNLOAD": "다운로드",
   "COM_REGENERATE": "재생성",
+  "COM_RESTART": "재시작",
+  "COM_START": "시작",
   "COM_DELETE": "삭제",
+  "COM_LOAD_IMAGE": "이미지 로드",
   "COM_DOWNLOAD_MODEL": "모델 다운로드 중",
   "COM_DOWNLOAD_SPEED": "다운로드 속도",
   "COM_LOADING_MODEL": "AI 모델 로딩 중",
@@ -29,57 +35,81 @@
   "COM_REQUESTING": "요청 중",
   "COM_DEFAULT": "기본값",
   "COM_STOP": "정지",
-  "COM_OPEN_LOCATION": "파일 위치 열기",
+  "COM_DEBUG": "개발자 로그 열기",
+  "COM_OPEN_LOCATION": "폴더에서 열기",
   "COM_OPEN_PARAMS": "매개변수 정보",
   "COM_LOW": "낮음",
   "COM_HIGH": "높음",
   "COM_FULLSCREEN": "전체 화면",
   "COM_FULLSCREEN_EXIT": "전체 화면 종료",
-  "SETTINGS_TAB_BASIC": "기본 설정",
+  "COM_DO_NOT_SHOW_AGAIN": "다시 표시하지 않음",
+  "COM_INSTALL": "설치",
+  "COM_INSTALL_ALL": "선택된 모든 항목 설치/수리",
+  "COM_REPAIR": "수리",
+  "COM_CONTINUE": "계속",
+  "COM_GO_TO_SETUP": "설정으로 이동",
+  "COM_LOAD_WORKFLOW_DEFAULTS": "Workflow 기본값 로드",
+  "SETTINGS_THEME": "테마",
+  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "HD 모드는 12GB 미만의 VRAM 또는 Intel Core Ultra PC 의 24GB 시스템 메모리를 가진 시스템에서 정상보다 느린 성능을 초래할 수 있습니다",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "Workflow 모드를 사용하려면 ComfyUI 를 설치해야 합니다. 이것은 AI Playground Setup에서 설치할 수 있는 선택적 구성 요소입니다.",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_DOWNLOADING": "설치 진행 중...",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_COMPLETED": "설치 성공!",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_ERROR": "설치 실패, 이유:",
+  "SETTINGS_TAB_IMAGE": "이미지",
+  "SETTINGS_TAB_BASIC": "기본",
   "SETTINGS_TAB_MODEL": "모델",
   "SETTINGS_INFERENCE_DEVICE": "추론 장치",
-  "SETTINGS_LLM_BACKEND": "대규모 언어 모델 백엔드",
+  "SETTINGS_LLM_BACKEND": "LLM Backend",
+  "SETTINGS_MODEL_IMAGE_SIZE": "이미지 크기",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "이미지 해상도",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_STANDARD": "표준",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD": "HD",
   "SETTINGS_MODEL_QUALITY": "생성 품질",
   "SETTINGS_MODEL_QUALITY_STANDARD": "표준",
-  "SETTINGS_MODEL_QUALITY_HIGH": "높은 품질",
+  "SETTINGS_MODEL_QUALITY_HIGH": "고품질",
   "SETTINGS_MODEL_QUALITY_FAST": "빠름",
   "SETTINGS_MODEL_QUALITY_MANUAL": "수동",
   "SETTINGS_MODEL_ADJUSTABLE_OPTIONS": "조정 가능한 옵션",
   "SETTINGS_MODEL_MANUAL_OPTIONS": "수동 옵션",
-  "SETTINGS_MODEL_NEGATIVE_PROMPT": "네거티브 프롬프트",
-  "SETTINGS_MODEL_SEED": "시드",
+  "SETTINGS_MODEL_NEGATIVE_PROMPT": "Negative Prompt",
+  "SETTINGS_MODEL_SEED": "Seed",
   "SETTINGS_MODEL_GENERATE_NUMBER": "생성 이미지 수",
-  "SETTINGS_MODEL_LLM_MODEL": "대규모 언어 모델",
+  "SETTINGS_MODEL_LLM_MODEL": "Large Language Model",
   "SETTINGS_MODEL_IMAGE_PREVIEW": "이미지 미리보기",
-  "SETTINGS_MODEL_SAFE_CHECK": "안전 확인 (SD 1.5에만 적용)",
+  "SETTINGS_MODEL_SAFE_CHECK": "안전 검사",
   "SETTINGS_MODEL_IMAGE_MODEL": "이미지 모델",
-  "SETTINGS_MODEL_INPAINT_MODEL": "인페인트/아웃페인트 모델",
+  "SETTINGS_MODEL_INPAINT_MODEL": "Inpaint/Outpaint 모델",
   "SETTINGS_MODEL_IMAGE_WIDTH": "너비",
   "SETTINGS_MODEL_IMAGE_HEIGHT": "높이",
-  "SETTINGS_MODEL_IMAGE_STEPS": "단계",
+  "SETTINGS_MODEL_IMAGE_STEPS": "Steps",
   "SETTINGS_MODEL_IMAGE_CFG": "CFG",
-  "SETTINGS_MODEL_LORA": "LoRa",
-  "SETTINGS_MODEL_SCHEDULER": "스케줄러",
+  "SETTINGS_MODEL_LORA": "LoRA",
+  "SETTINGS_MODEL_SCHEDULER": "Scheduler",
   "SETTINGS_MODEL_LIST_CHANGE_TIP": "모델 목록의 변경으로 인해 일부 설정이 수정되었습니다. 자세한 내용은 기본 설정을 참조하세요.",
   "SETTINGS_BASIC_LANGUAGE": "언어",
   "SETTINGS_BASIC_PATHS": "경로",
   "SETTINGS_BASIC_LLM_CHECKPOINTS": "LLM 모델 경로",
+  "SETTINGS_BASIC_GENERAL": "일반 설정",
+  "SETTINGS_BASIC_DEVICES": "장치",
+  "SETTINGS_BASIC_BACKEND": "Backends",
+  "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
+  "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API Token",
+  "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "유효한 토큰(hf_***)을 입력하세요.",
   "SETTINGS_MODEL_SD_CHECKPOINTS": "이미지 모델 경로",
-  "SETTINGS_MODEL_SD_INPAINT_CHECKPOINTS": "이미지 인페인트 모델 경로",
-  "SETTINGS_MODEL_SD_VAE": "Vae 경로",
-  "SETTINGS_MODEL_SD_LORA": "Lora 경로",
-  "SETTINGS_MODEL_SD_SCHEDULER": "스케줄러 경로",
+  "SETTINGS_MODEL_SD_INPAINT_CHECKPOINTS": "Inpaint 모델 경로",
+  "SETTINGS_MODEL_SD_VAE": "VAE 경로",
+  "SETTINGS_MODEL_SD_LORA": "LoRA 경로",
+  "SETTINGS_MODEL_SD_SCHEDULER": "Scheduler 경로",
   "SETTINGS_MODEL_SD_PRESET_MODEL": "이미지 기본 모델",
   "SETTINGS_MODEL_SD_STANDARD_MODEL": "표준 기본 모델",
-  "SETTINGS_MODEL_SD_STANDARD_INPAINT_MODEL": "표준 기본 인페인트/아웃페인트 모델",
+  "SETTINGS_MODEL_SD_STANDARD_INPAINT_MODEL": "표준 Inpaint/Outpaint 모델",
   "SETTINGS_MODEL_SD_HD_MODEL": "HD 기본 모델",
-  "SETTINGS_MODEL_RAG_MODEL": "RAG 쿼리 모델",
+  "SETTINGS_MODEL_RAG_MODEL": "RAG Query 모델",
+  "SETTINGS_BACKEND_STATUS": "Backend 상태",
+  "SETTINGS_MODEL_MANAGE_BACKEND": "Backend 구성 요소 관리",
   "SETTINGS_MODEL_EXIST": "모델이 이미 존재합니다. 다시 다운로드할 필요가 없습니다.",
   "SETTINGS_MODEL_DOWNLOAD": "모델 다운로드",
-  "SETTINGS_MODEL_DOWNLOAD_DESC": "아래는 AI 플레이그라운드에서 다양한 AI 작업을 수행할 수 있는 모델 목록입니다. 다운로드 및 사용 전 각 모델의 약관을 검토하세요. 또는 위의 모델 경로와 모델 기본값을 변경하여 다른 모델 소스를 추가하고 선택할 수 있습니다.",
+  "SETTINGS_MODEL_DOWNLOAD_DESC": "아래는 AI Playground 에서 다양한 AI 작업을 수행할 수 있는 모델 목록입니다. 다운로드 및 사용 전 각 모델의 약관을 검토하세요. 또는 위의 모델 경로와 모델 기본값을 변경하여 다른 모델 소스를 추가하고 선택할 수 있습니다.",
   "TAB_CREATE": "생성",
   "TAB_ENHANCE": "향상",
   "TAB_ANSWER": "답변",
@@ -87,8 +117,8 @@
   "ENHANCE_INPUT_IMAGE_REQUIRED": "생성 전 입력 이미지를 설정해 주세요",
   "ENHANCE_UPSCALE": "업스케일",
   "ENHANCE_IMAGE_PROMPT": "이미지 프롬프트",
-  "ENHANCE_INPAINT": "인페인트",
-  "ENHANCE_OUTPAINT": "아웃페인트",
+  "ENHANCE_INPAINT": "Inpaint",
+  "ENHANCE_OUTPAINT": "Outpaint",
   "ENHANCE_UPSCALE_SCALE": "업스케일",
   "ENHANCE_UPSCALE_SCALE_X1_5": "업스케일 (1.5배)",
   "ENHANCE_UPSCALE_SCALE_X2_0": "업스케일 (2.0배)",
@@ -99,55 +129,122 @@
   "ENHANCE_INPAINT_TYPE": "유형",
   "ENHANCE_INPAINT_FILL": "새로운 내용으로 채우기",
   "ENHANCE_INPAINT_FIX": "마스크 영역 수정 및 복구",
-  "ENHANCE_INPAINT_MASK_REQUIRED": "생성 전 인페인트 마스크를 그려주세요",
+  "ENHANCE_INPAINT_MASK_REQUIRED": "생성 전 Inpaint 마스크를 그려주세요",
   "ENHANCE_INPAINT_USE_IMAGE_MODEL": "현재 이미지 모델 사용",
-  "ENHANCE_COM_DENOISE": "강도",
+  "ENHANCE_COM_DENOISE": "노이즈 제거 강도",
   "ENHANCE_OUTPAINT_DIRECTION": "방향",
   "ENHANCE_PREVIEW_BEFORE_PROCESS": "처리 전",
   "ENHANCE_PREVIEW_AFTER_PROCESS": "처리 후",
-  "ENHANCE_IMAGE_PROMPT_TIP": "이미지를 어떻게 스타일링할지 설명하세요. 유지하고 싶은 원본 이미지의 설명과 변경하고 싶은 내용의 설명을 포함하세요. 강도 슬라이더를 조정하여 프롬프트가 결과에 미치는 영향을 증가시키거나 감소시킬 수 있습니다.",
-  "ENHANCE_INPAINT_TIP": "펜 도구를 사용하여 영역을 마스킹하세요. 프롬프트에 수정하거나 채우고 싶은 내용을 설명하세요. 수정 또는 채우기 옵션을 선택한 다음, 프롬프트가 미치는 강도 수준을 조정하세요.",
-  "ENHANCE_OUTPAINT_TIP": "확장하려는 방향을 선택하고, 필요한 경우 노이즈 제거 값을 조정한 다음, 텍스트 상자에 프롬프트 단어를 입력하세요. 확장된 이미지가 생성됩니다.",
-  "ENHANCE_UPSCALE_TIP": "조작이 필요한 이미지를 업로드하고 확대 배율을 선택한 후, 노이즈 제거 강도를 조정하세요 (0.1 미만이면 이미지 내용은 변경되지 않지만 크기는 여전히 확대됩니다). 텍스트 상자에 프롬프트 단어를 입력하여 확대된 이미지를 생성하세요.",
+  "ENHANCE_IMAGE_PROMPT_TIP": "이미지를 어떻게 스타일링할지 설명하세요. 유지하고 싶은 원본 이미지의 설명과 변경하고 싶은 내용의 설명을 포함하세요. 노이즈 제거 슬라이더를 조정하여 프롬프트가 결과에 미치는 영향을 증가시키거나 감소시킬 수 있습니다",
+  "ENHANCE_INPAINT_TIP": "펜 도구를 사용하여 영역을 마스킹하세요. 프롬프트에 수정하거나 채우고 싶은 내용을 설명하세요. 수정 또는 채우기 옵션을 선택한 다음, 프롬프트가 미치는 영향의 수준을 조정하세요",
+  "ENHANCE_OUTPAINT_TIP": "확장하려는 방향을 선택하고, 필요한 경우 노이즈 제거 값을 조정한 다음, 텍스트 상자에 프롬프트 단어를 입력하세요. 확장된 이미지가 생성됩니다",
+  "ENHANCE_UPSCALE_TIP": "조작이 필요한 이미지를 업로드하고 확대 배율을 선택한 후, 노이즈 제거 강도를 조정하세요 (0.1 미만이면 이미지 내용은 변경되지 않지만 크기는 여전히 확대됩니다). 텍스트 상자에 프롬프트 단어를 입력하여 확대된 이미지를 생성하세요",
   "ERROR_UNSUPPORTED_IMAGE_TYPE": "PNG, JPG, GIF, BMP 이미지 형식만 지원됩니다",
   "ANSWER_USER_NAME": "사용자",
-  "ANSWER_AI_NAME": "플레이그라운드",
+  "ANSWER_AI_NAME": "Playground",
+  "ANSWER_NEW_CONVERSATION": "새로운 대화",
   "ANSWER_ERROR_NOT_PROMPT": "프롬프트를 입력해 주세요",
   "ANSWER_ERROR_CLEAR_SESSION": "채팅 기록 지우기",
+  "INCREASE_FONT_SIZE": "글자 크기 증가",
+  "DECREASE_FONT_SIZE": "글자 크기 감소",
   "ANSWER_RAG_ENABLE": "파일 쿼리 활성화",
   "ANSWER_RAG_OPEN_DIALOG": "파일 업로더 열기",
-  "DOWNLOADER_CONFRIM_TIP": "실행에 필요한 하나 이상의 모델이 누락되었습니다. 아래 목록의 모델을 다운로드하시겠습니까?",
+  "REQUEST_LLM_MODEL_NAME": "Hugging Face 에서 원하는 모델을 추가하세요",
+  "REQUEST_LLM_MODEL_DESCRIPTION": "다음 구문으로 모델 저장소를 다운로드할 수 있습니다",
+  "REQUEST_LLM_MODEL_EXAMPLE": "<namespace>/<repo_name>, 예: 'facebook/opt-1.3b'",
+  "REQUEST_LLM_SINGLE_EXAMPLE": "<namespace>/<repo_name>/<file_path>, 예: 'microsoft/Phi-3-mini-4k-instruct-gguf/Phi-3-mini-4k-instruct-q4.gguf'",
+  "REQUEST_LLM_MODEL_DISCLAIMER_1": "참고: Hugging Face 의 모든 모델이 원하는 작업에 적합한 것은 아닙니다.",
+  "REQUEST_LLM_MODEL_DISCLAIMER_2": "다운로드 전에 모델 소개와 요구사항을 주의 깊게 읽으세요.",
+  "DOWNLOADER_CONFRIM_TIP": "실행에 필요한 하나 이상의 모델이 누락되었습니다. 아래 나열된 모델을 다운로드하시겠습니까?",
   "DOWNLOADER_MODEL": "모델",
   "DOWNLOADER_INFO": "정보",
   "DOWNLOADER_FILE_SIZE": "크기",
-  "DOWNLOADER_REASON": "이유",
+  "DOWNLOADER_GATED": "접근 제한됨",
+  "DOWNLOADER_GATED_TOKEN": "설정에 유효한 Hugging Face API 토큰이 추가되어 있는지 확인하세요. ",
+  "DOWNLOADER_ACCESS_INFO_SINGLE": "다운로드하려는 모델에 접근할 수 없습니다",
+  "DOWNLOADER_GATED_ACCEPT_SINGLE": "이 모델은 접근이 제한되어 있습니다. 모델 정보 페이지를 방문하여 접근 권한을 요청하세요. ",
+  "DOWNLOADER_ACCESS_ACCEPT_SINGLE": "접근할 수 없는 모델은 다운로드할 수 없습니다.",
+  "DOWNLOADER_ACCESS_INFO": "다운로드하려는 일부 모델에 접근할 수 없습니다",
+  "DOWNLOADER_GATED_ACCEPT": "일부 모델은 접근이 제한되어 있습니다. 모델 정보 페이지를 방문하여 접근 권한을 요청하세요. ",
+  "DOWNLOADER_ACCESS_ACCEPT": "접근할 수 없는 모델은 다운로드되지 않습니다.",
+  "DOWNLOADER_REASON": "유형",
   "DOWNLOADER_TERMS": "방문",
-  "DOWNLOADER_CONFLICT": "다른 다운로드 작업이 현재 진행 중이어서 새 작업을 시작할 수 없습니다. 현재 다운로드 작업을 취소하고 새 다운로드 작업을 시작할 수 있습니다.",
-  "DOWNLOADER_TERMS_TIP": "모델 카드와 라이선스를 검토했습니다. 모든 이용 약관에 동의하며 서드파티 모델을 다운로드 하겠습니다.",
+  "DOWNLOADER_LICENSE": "약관",
+  "DOWNLOADER_CONFLICT": "현재 다른 다운로드 작업이 진행 중이어서 새 작업을 시작할 수 없습니다. 현재 다운로드를 취소하고 새 다운로드를 시작할 수 있습니다",
+  "DOWNLOADER_TERMS_TIP": "모델 카드와 라이선스를 검토했습니다. 모든 이용 약관에 동의하며 서드파티 모델을 다운로드하겠습니다.",
   "DOWNLOADER_FOR_ANSWER_GENERATE": "답변 모델",
-  "DOWNLOADER_FOR_RAG_QUERY": "RAG 임베딩 모델",
+  "DOWNLOADER_FOR_RAG_QUERY": "RAG Embed 모델",
   "DOWNLOADER_FOR_IMAGE_GENERATE": "이미지 모델",
-  "DOWNLOADER_FOR_INAPINT_GENERATE": "인페인트/아웃페인트 모델",
+  "DOWNLOADER_FOR_INAPINT_GENERATE": "Inpaint/Outpaint 모델",
   "DOWNLOADER_FOR_IMAGE_PREVIEW": "이미지 미리보기 모델",
   "DOWNLOADER_FOR_IMAGE_UPSCALE": "이미지 업스케일 모델",
-  "DOWNLOADER_FOR_IMAGE_LORA": "빠른 이미지 모델",
+  "DOWNLOADER_FOR_IMAGE_LORA": "Fast 이미지 모델",
   "DOWNLOADER_DONWLOAD_TASK_PROGRESS": "모델 다운로드 완료",
   "RAG_FILE_TOTAL_FORMAT": "파일 총 개수: {total}",
   "RAG_DRAG_UPLOAD": "파일을 끌어다 놓아 업로드",
-  "RAG_DRAG_UPLOAD_UNSUPPORTED": "현재 프로그램은 관리자 권한으로 실행 중입니다. Windows UAC 제한으로 인해 드래그 앤 드롭 업로드를 사용할 수 없습니다. 파일을 업로드하려면 상단의 추가 버튼을 사용하세요.",
-  "RAG_UPLOAD_MIME_TYPE": "지원되는 파일 유형:\n\t텍스트 문서: .txt .md\n\t오피스 문서: .doc(x)\n\tPDF Doc: .pdf",
-  "RAG_ENABLE_TIP": "업로드된 파일에서만 답변",
+  "RAG_DRAG_UPLOAD_UNSUPPORTED": "현재 프로그램이 관리자 권한으로 실행 중입니다. Windows UAC 제한으로 인해 드래그 앤 드롭 업로드를 사용할 수 없습니다. 상단의 추가 버튼을 사용하여 파일을 업로드하세요.",
+  "RAG_UPLOAD_MIME_TYPE": "지원되는 파일 유형:\n\t텍스트 문서: .txt .md\n\t오피스 문서: .doc(x)\n\tPDF 문서: .pdf",
+  "RAG_ENABLE_TIP": "업로드된 파일에서만 답변 제공",
   "RAG_UPLOAD_TYPE_ERROR": "업로드된 파일에 지원되지 않는 파일 유형이 포함되어 있어 자동으로 제외되었습니다",
   "RAG_UPLOAD_FILE_EXISTS": "업로드된 파일 {filename}이(가) 이미 존재합니다",
   "RAG_ANALYZE_FILE_FAILED": "파일 {filename} 분석에 실패했습니다",
-  "RAG_USE_REJECT": "인터랙티브 문서 목록이 비어 있습니다. 먼저 문서를 업로드하세요",
+  "RAG_USE_REJECT": "문서 목록이 비어 있습니다. 먼저 문서를 업로드하세요",
   "RAG_WHEN_CLOSE_PANEL_AT_UPLODING": "모든 문서가 분석될 때까지 기다려 주세요",
   "RAG_SOURCE": "출처:",
-  "ERR_NOT_ENOUGH_DISK_SPACE": "디스크 공간이 부족합니다. {requires_space}가 필요하지만, 사용 가능한 공간이 {free_space}밖에 없습니다",
+  "ERR_NOT_ENOUGH_DISK_SPACE": "디스크 공간이 부족합니다. {requires_space}가 필요하지만 사용 가능한 공간이 {free_space}밖에 없습니다",
   "ERR_DOWNLOAD_FAILED": "모델 파일 다운로드에 실패했습니다",
-  "ERROR_RUNTIME_ERROR": "심각한 오류가 발생하면 프로그램을 재시작하고 다시 시도하세요",
-  "ERROR_GENERATE_UNKONW_EXCEPTION": "알 수 없는 오류가 발생했습니다. 모델에서 생성에 실패했습니다",
+  "ERROR_RUNTIME_ERROR": "심각한 오류가 발생한 경우 프로그램을 재시작하고 다시 시도하세요",
+  "ERROR_GENERATE_UNKONW_EXCEPTION": "알 수 없는 오류가 발생했습니다. 모델에서 생성하지 못했습니다",
   "ERROR_FOLDER_NOT_EXISTS": "지정된 디렉터리가 존재하지 않습니다",
+  "ERROR_REPO_NOT_EXISTS": "지정된 Repository-ID를 찾을 수 없습니다",
+  "ERROR_ALREADY_IN_MODELS": "지정된 모델이 이미 목록에 있습니다",
   "ERROR_ENHANCE_IMAGE_NOT_SET": "생성할 입력 이미지를 설정하세요",
-  "ERROR_UNFOUND_GRAPHICS": "프로그램 실행에 필요한 하드웨어가 컴퓨터 장치에서 감지되지 않을 경우, 확인을 클릭하면 프로그램이 종료됩니다."
+  "ERROR_UNFOUND_GRAPHICS": "컴퓨터에서 프로그램 실행에 필요한 하드웨어가 감지되지 않은 경우, 확인을 클릭하면 프로그램이 종료됩니다.",
+  "ERROR_PYTHON_BACKEND_INIT": "Backend 초기화 실패",
+  "ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "AI 추론 Backend 초기화에 실패했습니다. 애플리케이션을 다시 시작해 보세요. 문제가 지속되면 상세 정보에서 오류에 대한 추가 정보를 확인할 수 있습니다.",
+  "ERROR_PYTHON_BACKEND_INIT_DETAILS": "상세 정보",
+  "ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "로그 열기",
+  "WARNING_MODEL_TYPE_WRONG": "모델 유형이 요구사항에 맞지 않는 것 같습니다. 계속하시겠습니까?",
+  "BACKEND_MANAGE": "AI Playground Setup",
+  "BACKEND_REQUIRED_COMPONENTS": "필수 구성 요소",
+  "BACKEND_OPTIONAL_COMPONENTS": "선택적 구성 요소",
+  "BACKEND_SINGLE_COMPONENT": "구성 요소 ",
+  "BACKEND_TYPE": "유형",
+  "BACKEND_STATUS": "상태 ",
+  "BACKEND_INFORMATION": "정보",
+  "BACKEND_ENABLE": "활성화 *",
+  "BACKEND_ACTION": "작업",
+  "BACKEND_REQUIRED": "필수",
+  "BACKEND_OPTIONAL": "선택적",
+  "BACKEND_REQUIRED_COMPONENTS_MESSAGE": "Intel AI Playground를 사용하기 전에 추가 구성 요소를 다운로드해야 합니다. 안정적이고 무제한 인터넷 연결이 있는지 확인하세요.",
+  "BACKEND_OPTIONAL_COMPONENTS_MESSAGE": "선택적 구성 요소는 AI Playground 작동에 필수적이지 않지만 대체 기능을 제공합니다. 사용하려면 활성화하기 전에 정보 버튼을 클릭하여 이용 약관을 확인하세요.",
+  "BACKEND_TERMS_AND_CONDITIONS": "* 선택적 구성 요소를 검토했습니다. 모든 이용 약관에 동의하며 해당하는 경우 서드파티 소프트웨어를 다운로드하고 활성화하겠습니다.",
+  "BACKEND_STATUS_RUNNING": "실행 중",
+  "BACKEND_STATUS_STOPPING": "중지 중",
+  "BACKEND_STATUS_STARTING": "시작 중",
+  "BACKEND_STATUS_INSTALLED": "설치됨",
+  "BACKEND_STATUS_NOT_INSTALLED": "설치되지 않음",
+  "BACKEND_STATUS_INSTALLING": "설치 중",
+  "BACKEND_STATUS_FAILED": "실패",
+  "SETTINGS_IMAGE_MODE": "모드",
+  "SETTINGS_IMAGE_WORKFLOW": "Workflow",
+  "SETTINGS_IMAGE_DEFAULT": "기본값",
+  "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "참조 이미지",
+  "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "파일 이름 접두사",
+  "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - 낮은 임계값",
+  "SETTINGS_IMAGE_COMFY_CANNY_HIGH_THRESHOLD": "Canny - 높은 임계값",
+  "SETTINGS_IMAGE_COMFY_ACTIVATE_FACESWAP": "FaceSwap 활성화",
+  "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "원본 이미지",
+  "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "ControlNet - 강도",
+  "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "새로운 얼굴 이미지",
+  "WORKFLOW_RELOAD_INFO": "디스크에서 Workflow 다시 로드",
+  "WORKFLOW_DOWNLOAD_INFO": "최신 Workflow 다운로드 및 기존 Workflow 백업",
+  "WORKFLOW_HIGH_VRAM_INFO": "이 모델은 많은 VRAM이 필요합니다. 성능이 저하되면 해상도를 낮추거나 ComfyUI Backend를 다시 시작하세요.",
+  "WORKFLOW_HIGH_VRAM_WARNING": "많은 VRAM 필요",
+  "LOADING_VERIFYING_BACKENDS": "Backend 확인 중",
+  "LOADING_AI_PLAYGROUND_LOADING": "AI Playground 로딩 중"
 }
+
+
+
+
