--- a/WebUI/src/assets/i18n/th.json
+++ b/WebUI/src/assets/i18n/th.json
@@ -3,21 +3,27 @@
   "COM_SETTINGS": "การตั้งค่า",
   "COM_MINI": "ย่อหน้า",
   "COM_CLOSE": "ปิด",
+  "COM_ADD": "เพิ่ม",
   "COM_RESTORE": "คืนค่าเริ่มต้น",
   "COM_SD_PROMPT": "ป้อนคำสั่งเพื่อสร้างภาพ",
   "COM_LLM_PROMPT": "ป้อนคำสั่งเพื่อสร้างคำตอบ",
+  "COM_LLM_HF_PROMPT": "<namespace>/<repo_name>",
+  "COM_LLM_HF_PROMPT_GGUF": "<namespace>/<repo_name>/<file_path>",
   "COM_CLICK_UPLOAD": "- คลิกเพื่ออัพโหลดรูปภาพ -",
   "COM_GENERATE": "เริ่มสร้าง",
   "COM_GENERATING": "กำลังสร้าง",
-  "COM_HISTORY": "History",
+  "COM_HISTORY": "ประวัติ",
   "COM_POST_TO_ENHANCE_PROCESS": "โพสต์เพื่อปรับปรุงกระบวนการ",
   "COM_ZOOM_IN": "ดูขนาดต้นฉบับ",
-  "COM_COPY": "Copy",
-  "COM_COPY_SUCCESS_TIP": "Copy Success",
-  "COM_APPLY": "Apply",
-  "COM_DOWNLOAD": "Download",
-  "COM_REGENERATE": "เริ่มสร้าง",
+  "COM_COPY": "คัดลอก",
+  "COM_COPY_SUCCESS_TIP": "คัดลอกสำเร็จ",
+  "COM_APPLY": "ใช้",
+  "COM_DOWNLOAD": "ดาวน์โหลด",
+  "COM_REGENERATE": "เริ่มสร้างใหม่",
+  "COM_RESTART": "รีสตาร์ท",
+  "COM_START": "เริ่มต้น",
   "COM_DELETE": "ลบ",
+  "COM_LOAD_IMAGE": "โหลดภาพ",
   "COM_DOWNLOAD_MODEL": "กำลังดาวน์โหลดโมเดล",
   "COM_DOWNLOAD_SPEED": "ความเร็วในการดาวน์โหลด",
   "COM_LOADING_MODEL": "กำลังโหลดโมเดล AI",
@@ -25,19 +31,36 @@
   "COM_NO_SELECTED": "ไม่มีการเลือก",
   "COM_CONFIRM": "ยืนยัน",
   "COM_CANCEL": "ยกเลิก",
-  "COM_VISIT": "VISIT",
-  "COM_REQUESTING": "Requesting",
+  "COM_VISIT": "เยี่ยมชม",
+  "COM_REQUESTING": "กำลังขอ",
   "COM_DEFAULT": "ค่าเริ่มต้น",
   "COM_STOP": "หยุด",
-  "COM_OPEN_LOCATION": "Open Location",
+  "COM_DEBUG": "เปิดบันทึกผู้พัฒนา",
+  "COM_OPEN_LOCATION": "เปิดในโฟลเดอร์",
   "COM_OPEN_PARAMS": "ข้อมูลพารามิเตอร์",
-  "COM_LOW": "low",
-  "COM_HIGH": "high",
+  "COM_LOW": "ต่ำ",
+  "COM_HIGH": "สูง",
   "COM_FULLSCREEN": "เต็มจอ",
-  "COM_FULLSCREEN_EXIT": "FullScreen Exit",
-  "SETTINGS_TAB_BASIC": "การตั้งค่าพื้นฐาน",
+  "COM_FULLSCREEN_EXIT": "ออกจากเต็มจอ",
+  "COM_DO_NOT_SHOW_AGAIN": "อย่าแสดงข้อความนี้อีก",
+  "COM_INSTALL": "ติดตั้ง",
+  "COM_INSTALL_ALL": "ติดตั้ง/ซ่อมแซมทั้งหมดที่เลือก",
+  "COM_REPAIR": "ซ่อมแซม",
+  "COM_CONTINUE": "ดำเนินการต่อ",
+  "COM_GO_TO_SETUP": "ไปที่การตั้งค่า",
+  "COM_LOAD_WORKFLOW_DEFAULTS": "โหลดค่าเริ่มต้นของเวิร์กโฟลว์",
+  "SETTINGS_THEME": "ธีม",
+  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "โหมด HD อาจส่งผลให้ประสิทธิภาพการทำงานช้าลงกว่าปกติบนระบบที่มี VRAM น้อยกว่า 12 GB หรือหน่วยความจำระบบ 24GB สำหรับพีซี Intel Core Ultra",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "การใช้โหมดเวิร์กโฟลว์ต้องติดตั้ง ComfyUI ซึ่งเป็นส่วนประกอบที่ไม่จำเป็นและสามารถติดตั้งได้ใน AI Playground Setup",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_DOWNLOADING": "กำลังติดตั้ง...",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_COMPLETED": "ติดตั้งสำเร็จ!",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_ERROR": "ติดตั้งล้มเหลว เนื่องจาก",
+  "SETTINGS_TAB_IMAGE": "ภาพ",
+  "SETTINGS_TAB_BASIC": "พื้นฐาน",
   "SETTINGS_TAB_MODEL": "โมเดล",
-  "SETTINGS_INFERENCE_DEVICE": "Inference Device",
+  "SETTINGS_INFERENCE_DEVICE": "อุปกรณ์อนุมาน",
+  "SETTINGS_LLM_BACKEND": "แบ็กเอนด์ LLM",
+  "SETTINGS_MODEL_IMAGE_SIZE": "ขนาดภาพ",
   "SETTINGS_MODEL_IMAGE_RESOLUTION": "ความละเอียดของภาพ",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_STANDARD": "มาตรฐาน",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_HD": "HD",
@@ -48,37 +71,45 @@
   "SETTINGS_MODEL_QUALITY_MANUAL": "ปรับแต่งเอง",
   "SETTINGS_MODEL_ADJUSTABLE_OPTIONS": "ตัวเลือกที่ปรับได้",
   "SETTINGS_MODEL_MANUAL_OPTIONS": "เลือกด้วยตนเอง",
-  "SETTINGS_MODEL_NEGATIVE_PROMPT": "Negative Prompt",
+  "SETTINGS_MODEL_NEGATIVE_PROMPT": "พรอมต์เชิงลบ",
   "SETTINGS_MODEL_SEED": "Seed",
-  "SETTINGS_MODEL_GENERATE_NUMBER": "Generate Image Number",
-  "SETTINGS_MODEL_LLM_MODEL": "Large Language Model",
-  "SETTINGS_MODEL_IMAGE_PREVIEW": "Image Preview",
-  "SETTINGS_MODEL_SAFE_CHECK": "Safe Check(Effect only on SD 1.5)",
-  "SETTINGS_MODEL_IMAGE_MODEL": "Image Model",
-  "SETTINGS_MODEL_INPAINT_MODEL": "Inpaint/Outpaint Model",
+  "SETTINGS_MODEL_GENERATE_NUMBER": "จำนวนภาพที่จะสร้าง",
+  "SETTINGS_MODEL_LLM_MODEL": "โมเดลภาษาขนาดใหญ่",
+  "SETTINGS_MODEL_IMAGE_PREVIEW": "ภาพตัวอย่าง",
+  "SETTINGS_MODEL_SAFE_CHECK": "การตรวจสอบความปลอดภัย",
+  "SETTINGS_MODEL_IMAGE_MODEL": "โมเดลภาพ",
+  "SETTINGS_MODEL_INPAINT_MODEL": "โมเดล Inpaint/Outpaint",
   "SETTINGS_MODEL_IMAGE_WIDTH": "ความกว้าง",
-  "SETTINGS_MODEL_IMAGE_HEIGHT": "Height",
-  "SETTINGS_MODEL_IMAGE_STEPS": "Steps",
+  "SETTINGS_MODEL_IMAGE_HEIGHT": "ความสูง",
+  "SETTINGS_MODEL_IMAGE_STEPS": "ขั้นตอน",
   "SETTINGS_MODEL_IMAGE_CFG": "CFG",
   "SETTINGS_MODEL_LORA": "Lora",
-  "SETTINGS_MODEL_SCHEDULER": "ตัวกำหนดตารางเวลา",
+  "SETTINGS_MODEL_SCHEDULER": "Scheduler",
   "SETTINGS_MODEL_LIST_CHANGE_TIP": "การเปลี่ยนแปลงในรายการโมเดลส่งผลให้มีการปรับเปลี่ยนการตั้งค่าบางอย่าง โปรดดูการตั้งค่าพื้นฐานสำหรับข้อมูลเพิ่มเติม",
   "SETTINGS_BASIC_LANGUAGE": "ภาษา",
   "SETTINGS_BASIC_PATHS": "เส้นทาง",
-  "SETTINGS_BASIC_LLM_CHECKPOINTS": "LLM Model Path",
-  "SETTINGS_MODEL_SD_CHECKPOINTS": "Image Model Path",
+  "SETTINGS_BASIC_LLM_CHECKPOINTS": "เส้นทางโมเดล LLM",
+  "SETTINGS_BASIC_GENERAL": "การตั้งค่าทั่วไป",
+  "SETTINGS_BASIC_DEVICES": "อุปกรณ์",
+  "SETTINGS_BASIC_BACKEND": "แบ็กเอนด์",
+  "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
+  "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "โทเค็น API",
+  "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "โปรดป้อนโทเค็นที่ถูกต้อง (hf_***)",
+  "SETTINGS_MODEL_SD_CHECKPOINTS": "เส้นทางโมเดลภาพ",
   "SETTINGS_MODEL_SD_INPAINT_CHECKPOINTS": "เส้นทางโมเดล Inpaint ของภาพ",
-  "SETTINGS_MODEL_SD_VAE": "Vae Path",
-  "SETTINGS_MODEL_SD_LORA": "Lora Path",
-  "SETTINGS_MODEL_SD_SCHEDULER": "เส้นทางตัวกำหนดตารางเวลา",
+  "SETTINGS_MODEL_SD_VAE": "เส้นทาง VAE",
+  "SETTINGS_MODEL_SD_LORA": "เส้นทาง Lora",
+  "SETTINGS_MODEL_SD_SCHEDULER": "เส้นทาง Scheduler",
   "SETTINGS_MODEL_SD_PRESET_MODEL": "โมเดลเริ่มต้นของภาพ",
   "SETTINGS_MODEL_SD_STANDARD_MODEL": "โมเดลเริ่มต้นมาตรฐาน",
-  "SETTINGS_MODEL_SD_STANDARD_INPAINT_MODEL": "โมเดล Inpaint/OutPaint เริ่มต้นมาตรฐาน",
+  "SETTINGS_MODEL_SD_STANDARD_INPAINT_MODEL": "โมเดล Inpaint/Outpaint เริ่มต้นมาตรฐาน",
   "SETTINGS_MODEL_SD_HD_MODEL": "โมเดลเริ่มต้น HD",
-  "SETTINGS_MODEL_RAG_MODEL": "โมเดลการค้นหา Rag",
+  "SETTINGS_MODEL_RAG_MODEL": "โมเดลการค้นหา RAG",
+  "SETTINGS_BACKEND_STATUS": "สถานะแบ็กเอนด์",
+  "SETTINGS_MODEL_MANAGE_BACKEND": "จัดการส่วนประกอบแบ็กเอนด์",
   "SETTINGS_MODEL_EXIST": "โมเดลมีอยู่แล้ว ไม่จำเป็นต้องดาวน์โหลดซ้ำ",
   "SETTINGS_MODEL_DOWNLOAD": "ดาวน์โหลดโมเดล",
-  "SETTINGS_MODEL_DOWNLOAD_DESC": "ด้านล่างนี้เป็นรายการโมเดลที่สามารถทำงานต่างๆ ใน ​​Al Playground ได้ ตรวจสอบเงื่อนไขของแต่ละโมเดลก่อนดาวน์โหลดและใช้งาน หรือเลือกที่จะเพิ่มเข้าไปและเลือกแหล่งโมเดลอื่นโดยเปลี่ยนเส้นทางโมเดลและค่าเริ่มต้นของโมเดลด้านบน",
+  "SETTINGS_MODEL_DOWNLOAD_DESC": "ด้านล่างนี้เป็นรายการโมเดลที่สามารถทำงานต่างๆ ใน AI Playground ได้ ตรวจสอบเงื่อนไขของแต่ละโมเดลก่อนดาวน์โหลดและใช้งาน หรือเลือกที่จะเพิ่มเข้าไปและเลือกแหล่งโมเดลอื่นโดยเปลี่ยนเส้นทางโมเดลและค่าเริ่มต้นของโมเดลด้านบน",
   "TAB_CREATE": "สร้าง",
   "TAB_ENHANCE": "ปรับปรุง",
   "TAB_ANSWER": "คำตอบ",
@@ -94,47 +125,65 @@
   "ENHANCE_UPSCALE_VARIATION": "การเปลี่ยนแปลง",
   "ENHANCE_UPSCALE_VARIATION_NONE": "ไม่มี",
   "ENHANCE_UPSCALE_VARIATION_DISABLE": "ละเอียดอ่อน",
-  "ENHANCE_UPSCALE_VARIATION_STRONG": "Strong",
+  "ENHANCE_UPSCALE_VARIATION_STRONG": "เข้มข้น",
   "ENHANCE_INPAINT_TYPE": "ประเภท",
-  "ENHANCE_INPAINT_FILL": "Fill With Something New",
-  "ENHANCE_INPAINT_FIX": "Fix and Repair Masked Area",
-  "ENHANCE_INPAINT_MASK_REQUIRED": "Please draw inpaint mask before generate",
+  "ENHANCE_INPAINT_FILL": "เติมด้วยสิ่งใหม่",
+  "ENHANCE_INPAINT_FIX": "ซ่อมและซ่อมแซมพื้นที่ที่ปิดบัง",
+  "ENHANCE_INPAINT_MASK_REQUIRED": "กรุณาวาดมาสก์ Inpaint ก่อนสร้าง",
   "ENHANCE_INPAINT_USE_IMAGE_MODEL": "ใช้แบบจำลองภาพปัจจุบัน",
-  "ENHANCE_COM_DENOISE": "Influenceล",
+  "ENHANCE_COM_DENOISE": "อิทธิพล",
   "ENHANCE_OUTPAINT_DIRECTION": "ทิศทาง",
   "ENHANCE_PREVIEW_BEFORE_PROCESS": "ก่อนดำเนินการ",
   "ENHANCE_PREVIEW_AFTER_PROCESS": "หลังดำเนินการ",
-  "ENHANCE_IMAGE_PROMPT_TIP": "Describe how you want the image to be stylized. Include descriptions of the original image you want to keep and descriptions of what you want to be different. Adjust the influence slider to increase or decrease the how much influence your prompt has in the outcome",
-  "ENHANCE_INPAINT_TIP": "Use the pen tool to mask an area. Describe in the prompt what you want to Fix or Fill. Select the Fix or Fill option, then adjust the level of influence the prompt has",
-  "ENHANCE_OUTPAINT_TIP": "Select the direction you want to expand, adjust the value of denoise if necessary, and enter a prompt word in the text box. The expanded image will be generated",
-  "ENHANCE_UPSCALE_TIP": "Upload the image that needs to be manipulated, select the amplification factor, adjust the amplitude of denoise (if less than 0.1, the image content will not change, but the size will still upsacle), enter the prompt word in the text box to generate the enlarged image",
-  "ERROR_UNSUPPORTED_IMAGE_TYPE": "Only supports PNG, JPG, GIF, and BMP image formats",
-  "ANSWER_USER_NAME": "You",
+  "ENHANCE_IMAGE_PROMPT_TIP": "อธิบายว่าคุณต้องการให้รูปภาพมีลักษณะอย่างไร รวมถึงคำอธิบายของรูปภาพต้นฉบับที่คุณต้องการเก็บและคำอธิบายของสิ่งที่คุณต้องการให้ต่างออกไป ปรับอิทธิพลของพรอมต์ให้เหมาะสม",
+  "ENHANCE_INPAINT_TIP": "ใช้เครื่องมือปากกาเพื่อวาดพื้นที่ที่ต้องการซ่อมแซม อธิบายในพรอมต์ว่าคุณต้องการซ่อมแซมหรือเติมสิ่งใหม่ เลือกตัวเลือกซ่อมแซมหรือเติมสิ่งใหม่ แล้วปรับอิทธิพลของพรอมต์ให้เหมาะสม",
+  "ENHANCE_OUTPAINT_TIP": "เลือกทิศทางที่คุณต้องการขยาย ปรับอิทธิพลของ denoise หากจำเป็น แล้วป้อนพรอมต์คำในกล่องข้อความ รูปภาพที่ขยายจะถูกสร้างขึ้น",
+  "ENHANCE_UPSCALE_TIP": "อัพโหลดภาพที่ต้องการจัดการ เลือกปัจจัยการขยาย ปรับอิทธิพลของ denoise (หากน้อยกว่า 0.1 เนื้อหาของภาพจะไม่เปลี่ยนแปลง แต่ขนาดจะยังคงขยาย) ป้อนพรอมต์คำในกล่องข้อความเพื่อสร้างภาพที่ขยาย",
+  "ERROR_UNSUPPORTED_IMAGE_TYPE": "รองรับเฉพาะรูปภาพ PNG, JPG, GIF และ BMP",
+  "ANSWER_USER_NAME": "คุณ",
   "ANSWER_AI_NAME": "Playground",
-  "ANSWER_ERROR_NOT_PROMPT": "Please input prompt",
-  "ANSWER_ERROR_CLEAR_SESSION": "Clear Chat History",
-  "ANSWER_RAG_ENABLE": "Enable File Query",
-  "ANSWER_RAG_OPEN_DIALOG": "Open File Uploader",
-  "DOWNLOADER_CONFRIM_TIP": "You are missing one or more models needed to run. Would you like to download the model(s) listed below?",
-  "DOWNLOADER_MODEL": "Model",
-  "DOWNLOADER_INFO": "Info",
-  "DOWNLOADER_FILE_SIZE": "Size",
-  "DOWNLOADER_REASON": "Reason",
-  "DOWNLOADER_TERMS": "Visit",
-  "DOWNLOADER_CONFLICT": "Another download task is currently in progress, and a new task cannot be started. You can cancel the current download task and start a new download task",
-  "DOWNLOADER_TERMS_TIP": "I have reviewed the model card(s) and license(s). I agree to all terms and conditions would like to download the third-party model(s).",
-  "DOWNLOADER_FOR_ANSWER_GENERATE": "Answer Model",
-  "DOWNLOADER_FOR_RAG_QUERY": "RAG Embed Model",
-  "DOWNLOADER_FOR_IMAGE_GENERATE": "แบบจำลองภาพ",
-  "DOWNLOADER_FOR_INAPINT_GENERATE": "โมเดล InPaint/OutPaint",
-  "DOWNLOADER_FOR_IMAGE_PREVIEW": "Image Preview Model",
-  "DOWNLOADER_FOR_IMAGE_UPSCALE": "ภาพโมเดลอัพสเกล",
-  "DOWNLOADER_FOR_IMAGE_LORA": "แบบจำลองภาพรวดเร็ว",
+  "ANSWER_NEW_CONVERSATION": "การสนทนาใหม่",
+  "ANSWER_ERROR_NOT_PROMPT": "กรุณาป้อนพรอมต์",
+  "ANSWER_ERROR_CLEAR_SESSION": "ล้างประวัติการสนทนา",
+  "INCREASE_FONT_SIZE": "ขยายข้อความ",
+  "DECREASE_FONT_SIZE": "ย่อข้อความ",
+  "ANSWER_RAG_ENABLE": "เปิดใช้งานการค้นหาไฟล์",
+  "ANSWER_RAG_OPEN_DIALOG": "เปิดการอัปโหลดไฟล์",
+  "REQUEST_LLM_MODEL_NAME": "เพิ่มโมเดลที่คุณต้องการจาก huggingface.co",
+  "REQUEST_LLM_MODEL_DESCRIPTION": "คุณสามารถดาวน์โหลดโมเดลโดยใช้คำสั่ง",
+  "REQUEST_LLM_MODEL_EXAMPLE": "<namespace>/<repo_name>, ตัวอย่างเช่น 'facebook/opt-1.3b'",
+  "REQUEST_LLM_SINGLE_EXAMPLE": "<namespace>/<repo_name>/<file_path>, ตัวอย่างเช่น 'microsoft/Phi-3-mini-4k-instruct-gguf/Phi-3-mini-4k-instruct-q4.gguf'",
+  "REQUEST_LLM_MODEL_DISCLAIMER_1": "โปรดทราบว่าไม่ใช่โมเดลทุกตัวบน huggingface.co ที่เหมาะสมกับการทำงานที่คุณต้องการ",
+  "REQUEST_LLM_MODEL_DISCLAIMER_2": "โปรดอ่านคำอธิบายและข้อกำหนดของโมเดลอย่างรอบคอบก่อนดาวน์โหลด",
+  "DOWNLOADER_CONFRIM_TIP": "คุณไม่มีโมเดลที่จำเป็นในการทำงาน คุณต้องการดาวน์โหลดโมเดลที่แสดงด้านล่างหรือไม่",
+  "DOWNLOADER_MODEL": "โมเดล",
+  "DOWNLOADER_INFO": "ข้อมูล",
+  "DOWNLOADER_FILE_SIZE": "ขนาดไฟล์",
+  "DOWNLOADER_GATED": "จำกัดการเข้าถึง",
+  "DOWNLOADER_GATED_TOKEN": "โปรดเพิ่มโทเค็น API ของ huggingface.co ในการตั้งค่า",
+  "DOWNLOADER_ACCESS_INFO_SINGLE": "คุณไม่มีสิทธิ์เข้าถึงโมเดลที่คุณต้องการดาวน์โหลด",
+  "DOWNLOADER_GATED_ACCEPT_SINGLE": "โมเดลนี้มีการจำกัดสิทธิ์ โปรดไปที่หน้าข้อมูลโมเดลและขอสิทธิ์เข้าถึง",
+  "DOWNLOADER_ACCESS_ACCEPT_SINGLE": "โมเดลที่ไม่สามารถเข้าถึงได้จะไม่สามารถดาวน์โหลดได้",
+  "DOWNLOADER_ACCESS_INFO": "คุณไม่มีสิทธิ์เข้าถึงโมเดลบางตัวที่คุณต้องการดาวน์โหลด",
+  "DOWNLOADER_GATED_ACCEPT": "โมเดลบางตัวมีการจำกัดสิทธิ์ โปรดไปที่หน้าข้อมูลโมเดลและขอสิทธิ์เข้าถึง",
+  "DOWNLOADER_ACCESS_ACCEPT": "โมเดลที่ไม่สามารถเข้าถึงได้จะไม่สามารถดาวน์โหลดได้",
+  "DOWNLOADER_REASON": "สาเหตุ",
+  "DOWNLOADER_TERMS": "เยี่ยมชม",
+  "DOWNLOADER_LICENSE": "ลิขสิทธิ์",
+  "DOWNLOADER_CONFLICT": "มีการดาวน์โหลดอยู่แล้ว คุณไม่สามารถเริ่มการดาวน์โหลดใหม่ได้ คุณสามารถยกเลิกการดาวน์โหลดที่กำลังดำเนินอยู่และเริ่มการดาวน์โหลดใหม่ได้",
+  "DOWNLOADER_TERMS_TIP": "ฉันได้อ่านข้อมูลโมเดลและลิขสิทธิ์ ฉันยอมรับข้อกำหนดและเงื่อนไขทั้งหมดและต้องการดาวน์โหลดโมเดลของบุคคลที่สาม",
+  "DOWNLOADER_FOR_ANSWER_GENERATE": "โมเดลคำตอบ",
+  "DOWNLOADER_FOR_RAG_QUERY": "โมเดลการค้นหา RAG",
+  "DOWNLOADER_FOR_IMAGE_GENERATE": "โมเดลภาพ",
+  "DOWNLOADER_FOR_INAPINT_GENERATE": "โมเดล Inpaint/Outpaint",
+  "DOWNLOADER_FOR_IMAGE_PREVIEW": "โมเดลภาพตัวอย่าง",
+  "DOWNLOADER_FOR_IMAGE_UPSCALE": "โมเดลภาพอัปสเกล",
+  "DOWNLOADER_FOR_IMAGE_LORA": "โมเดลภาพ Fast",
   "DOWNLOADER_DONWLOAD_TASK_PROGRESS": "ดาวน์โหลดโมเดลเสร็จสมบูรณ์",
-  "RAG_FILE_TOTAL_FORMAT": "File total: {total}",
+  "RAG_FILE_TOTAL_FORMAT": "จำนวนไฟล์ทั้งหมด: {total}",
   "RAG_DRAG_UPLOAD": "ลากไฟล์เพื่ออัพโหลด",
-  "RAG_DRAG_UPLOAD_UNSUPPORTED": "โปรแกรมปัจจุบันเริ่มทำงานด้วยสิทธิ์ของผู้ดูแลระบบ เนื่องจากข้อจำกัดของ UAC ของ Windows จึงไม่สามารถใช้การลากและวางเพื่ออัปโหลดไฟล์ได้ โปรดใช้ปุ่มเพิ่มที่ด้านบนเพื่ออัปโหลดไฟล์.",
-  "RAG_UPLOAD_MIME_TYPE": "ประเภทไฟล์ที่รองรับ:\n\tText Doc: .txt .md\n\tOffice Doc: .doc(x)\n\tPDF Doc: .pdf",
+  "RAG_DRAG_UPLOAD_UNSUPPORTED": "โปรแกรมปัจจุบันเริ่มทำงานด้วยสิทธิ์ของผู้ดูแลระบบ เนื่องจากข้อจำกัดของ UAC ของ Windows จึงไม่สามารถใช้การลากและวางเพื่ออัปโหลดไฟล์ได้ โปรดใช้ปุ่มเพิ่มที่ด้านบนเพื่ออัปโหลดไฟล์",
+  "RAG_UPLOAD_MIME_TYPE": "ประเภทไฟล์ที่รองรับ:\n\tเอกสารข้อความ: .txt .md\n\tเอกสาร Office: .doc(x)\n\tเอกสาร PDF: .pdf",
   "RAG_ENABLE_TIP": "ให้คำตอบเฉพาะที่อัพโหลดเท่านั้น",
   "RAG_UPLOAD_TYPE_ERROR": "มีประเภทไฟล์ที่ไม่รองรับในไฟล์ที่อัพโหลดซึ่งจะถูกแยกออกโดยอัตโนมัติ",
   "RAG_UPLOAD_FILE_EXISTS": "ไฟล์ที่อัพโหลด {filename} มีอยู่แล้ว",
@@ -147,22 +196,51 @@
   "ERROR_RUNTIME_ERROR": "หากเกิดข้อผิดพลาด โปรดรีสตาร์ทโปรแกรมและลองอีกครั้ง",
   "ERROR_GENERATE_UNKONW_EXCEPTION": "เกิดข้อผิดพลาดที่ไม่ทราบสาเหตุ ไม่สามารถสร้างจากแบบจำลองได้",
   "ERROR_FOLDER_NOT_EXISTS": "ไม่พบไดเร็กทอรีที่ระบุ",
+  "ERROR_REPO_NOT_EXISTS": "ไม่พบรีพอซิทอรีที่ระบุ",
+  "ERROR_ALREADY_IN_MODELS": "โมเดลที่ระบุอยู่ในรายการแล้ว",
   "ERROR_ENHANCE_IMAGE_NOT_SET": "กรุณาตั้งค่าภาพอินพุตที่จะสร้างขึ้น",
-  "ERROR_UNFOUND_GRAPHICS": "หากไม่พบฮาร์ดแวร์ที่จำเป็นสำหรับการทำงานของโปรแกรมบนอุปกรณ์คอมพิวเตอร์ โปรแกรมจะหยุดทำงานเมื่อคลิกตกลง.",
-  "COM_DO_NOT_SHOW_AGAIN": "อย่าแสดงข้อความนี้อีก",
-  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "โหมด HD อาจส่งผลให้ประสิทธิภาพการทำงานช้าลงกว่าปกติบนระบบที่มี VRAM น้อยกว่า 12 GB หรือหน่วยความจำระบบ 24GB สำหรับพีซี Intel Core Ultra",
-  "SETTINGS_MODEL_IMAGE_SIZE": "ขนาดภาพ",
-  "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
-  "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API Token",
-  "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "โปรดป้อนโทเค็นที่ถูกต้อง (hf_***)",
-  "INCREASE_FONT_SIZE": "ขยายข้อความ",
-  "DECREASE_FONT_SIZE": "ย่อข้อความ",
-  "DOWNLOADER_GATED": "Gated",
-  "DOWNLOADER_GATED_INFO": "Some of the models you are trying to download are gated.",
-  "DOWNLOADER_GATED_TOKEN": "โปรดเพิ่มโทเค็น API ของ Huggingface.co ในการตั้งค่า",
-  "DOWNLOADER_GATED_ACCEPT": "โปรดอย่าลืมไปที่หน้าข้อมูลโมเดลและขอสิทธิ์เข้าถึง หากคุณไม่ได้รับอนุญาตให้เข้าถึงโมเดลที่มีGated การดาวน์โหลดจะล้มเหลว",
+  "ERROR_UNFOUND_GRAPHICS": "หากไม่พบฮาร์ดแวร์ที่จำเป็นสำหรับการทำงานของโปรแกรมบนอุปกรณ์คอมพิวเตอร์ โปรแกรมจะหยุดทำงานเมื่อคลิกตกลง",
   "ERROR_PYTHON_BACKEND_INIT": "การเริ่มต้นแบ็กเอนด์ล้มเหลว",
   "ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "แบ็กเอนด์การอนุมาน AI ไม่สามารถเริ่มต้นได้ โปรดลองรีสตาร์ทแอปพลิเคชัน หากปัญหายังคงมีอยู่ คุณสามารถตรวจสอบรายละเอียดเพื่อดูข้อมูลเพิ่มเติมเกี่ยวกับข้อผิดพลาดได้",
   "ERROR_PYTHON_BACKEND_INIT_DETAILS": "รายละเอียด",
-  "ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "Open Log"
+  "ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "เปิดบันทึก",
+  "WARNING_MODEL_TYPE_WRONG": "ประเภทโมเดลอาจไม่เหมาะสม คุณแน่ใจหรือไม่ว่าต้องการดำเนินการต่อ",
+  "BACKEND_MANAGE": "AI Playground Setup",
+  "BACKEND_REQUIRED_COMPONENTS": "ส่วนประกอบที่จำเป็น",
+  "BACKEND_OPTIONAL_COMPONENTS": "ส่วนประกอบที่ไม่จำเป็น",
+  "BACKEND_SINGLE_COMPONENT": "ส่วนประกอบ",
+  "BACKEND_TYPE": "ประเภท",
+  "BACKEND_STATUS": "สถานะ",
+  "BACKEND_INFORMATION": "ข้อมูล",
+  "BACKEND_ENABLE": "เปิดใช้งาน *",
+  "BACKEND_ACTION": "การดำเนินการ",
+  "BACKEND_REQUIRED": "จำเป็น",
+  "BACKEND_OPTIONAL": "ไม่จำเป็น",
+  "BACKEND_REQUIRED_COMPONENTS_MESSAGE": "ก่อนที่คุณจะสามารถใช้ Intel AI Playground ได้ คุณต้องดาวน์โหลดส่วนประกอบเพิ่มเติมบางอย่าง โปรดตรวจสอบให้แน่ใจว่าคุณมีการเชื่อมต่ออินเทอร์เน็ตที่เสถียรและไม่มีการจำกัดข้อมูล",
+  "BACKEND_OPTIONAL_COMPONENTS_MESSAGE": "ส่วนประกอบที่ไม่จำเป็นไม่จำเป็นต่อการทำงานของ AI Playground แต่ให้ฟังก์ชันเพิ่มเติม หากคุณต้องการใช้ คุณสามารถคลิกที่ปุ่มข้อมูลเพื่อทำความคุ้นเคยกับข้อกำหนดและเงื่อนไขก่อนที่จะเปิดใช้งาน",
+  "BACKEND_TERMS_AND_CONDITIONS": "* ฉันได้อ่านและยอมรับข้อกำหนดและเงื่อนไขของส่วนประกอบที่ไม่จำเป็น ฉันต้องการดาวน์โหลดและติดตั้งซอฟต์แวร์ของบุคคลที่สามหากมี",
+  "BACKEND_STATUS_RUNNING": "กำลังทำงาน",
+  "BACKEND_STATUS_STOPPING": "กำลังหยุด",
+  "BACKEND_STATUS_STARTING": "กำลังเริ่มต้น",
+  "BACKEND_STATUS_INSTALLED": "ติดตั้งแล้ว",
+  "BACKEND_STATUS_NOT_INSTALLED": "ไม่ได้ติดตั้ง",
+  "BACKEND_STATUS_INSTALLING": "กำลังติดตั้ง",
+  "BACKEND_STATUS_FAILED": "ล้มเหลว",
+  "SETTINGS_IMAGE_MODE": "โหมด",
+  "SETTINGS_IMAGE_WORKFLOW": "เวิร์กโฟลว์",
+  "SETTINGS_IMAGE_DEFAULT": "ค่าเริ่มต้น",
+  "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "รูปภาพอ้างอิง",
+  "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "คำนำหน้าชื่อไฟล์",
+  "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - ค่าขีดแบ่งต่ำ",
+  "SETTINGS_IMAGE_COMFY_CANNY_HIGH_THRESHOLD": "Canny - ค่าขีดแบ่งสูง",
+  "SETTINGS_IMAGE_COMFY_ACTIVATE_FACESWAP": "เปิดใช้งาน FaceSwap",
+  "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "รูปภาพต้นฉบับ",
+  "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "ControlNet - ความเข้มข้น",
+  "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "รูปภาพใบหน้าใหม่",
+  "WORKFLOW_RELOAD_INFO": "โหลดเวิร์กโฟลว์จากดิสก์ใหม่",
+  "WORKFLOW_DOWNLOAD_INFO": "ดาวน์โหลดเวิร์กโฟลว์ล่าสุดและสำรองเวิร์กโฟลว์ที่มีอยู่",
+  "WORKFLOW_HIGH_VRAM_INFO": "โมเดลนี้ต้องการ VRAM จำนวนมาก ลดความละเอียดและ/หรือรีสตาร์ทแบ็กเอนด์ ComfyUI เมื่อประสบปัญหาประสิทธิภาพการทำงานที่ไม่ดี",
+  "WORKFLOW_HIGH_VRAM_WARNING": "ต้องการ VRAM สูง",
+  "LOADING_VERIFYING_BACKENDS": "กำลังตรวจสอบแบ็กเอนด์",
+  "LOADING_AI_PLAYGROUND_LOADING": "กำลังโหลด AI Playground"
 }
