--- a/WebUI/src/assets/i18n/zh-CN.json
+++ b/WebUI/src/assets/i18n/zh-CN.json
@@ -7,8 +7,8 @@
   "COM_RESTORE": "恢复默认",
   "COM_SD_PROMPT": "输入提示生成图片",
   "COM_LLM_PROMPT": "输入提示生成答案",
-  "COM_LLM_HF_PROMPT": "<作者名>/<仓库名>",
-  "COM_LLM_HF_PROMPT_GGUF": "<作者名>/<仓库名>/<文件名>",
+  "COM_LLM_HF_PROMPT": "<namespace>/<repo_name>",
+  "COM_LLM_HF_PROMPT_GGUF": "<namespace>/<repo_name>/<file_path>",
   "COM_CLICK_UPLOAD": "- 上传图片 -",
   "COM_GENERATE": "生成",
   "COM_GENERATING": "生成中",
@@ -21,8 +21,9 @@
   "COM_DOWNLOAD": "下载",
   "COM_REGENERATE": "重新生成",
   "COM_RESTART": "重启",
-  "COM_START": "启动!",
+  "COM_START": "启动",
   "COM_DELETE": "删除",
+  "COM_LOAD_IMAGE": "加载图片",
   "COM_DOWNLOAD_MODEL": "正在下载模型",
   "COM_DOWNLOAD_SPEED": "下载速度",
   "COM_LOADING_MODEL": "正在加载AI模型",
@@ -34,6 +35,7 @@
   "COM_REQUESTING": "请求中",
   "COM_DEFAULT": "默认",
   "COM_STOP": "停止",
+  "COM_DEBUG": "打开开发者日志",
   "COM_OPEN_LOCATION": "打开文件所在位置",
   "COM_OPEN_PARAMS": "参数信息",
   "COM_LOW": "低",
@@ -45,7 +47,10 @@
   "COM_INSTALL_ALL": "安装/修复全部所选组件",
   "COM_REPAIR": "修复",
   "COM_CONTINUE": "继续",
-  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "高清模式可能导致性能下降，特别是在显存小于12GB或系统内存小于24GB的Intel Core Ultra PC上。",
+  "COM_GO_TO_SETUP": "前往设置",
+  "COM_LOAD_WORKFLOW_DEFAULTS": "加载工作流默认值",
+  "SETTINGS_THEME": "主题",
+  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "高清模式可能导致性能下降，尤其是在显存小于12GB或系统内存小于24GB的 Intel Core Ultra 处理器电脑上",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "需要安装 ComfyUI 组件方可使用工作流模式。可选的 ComfyUI 组件可以在基本设置页面中安装。",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_DOWNLOADING": "正在安装...",
   "SETTINGS_MODEL_WORKFLOW_COMFYUI_COMPLETED": "安装成功!",
@@ -71,7 +76,7 @@
   "SETTINGS_MODEL_GENERATE_NUMBER": "生成图片数量",
   "SETTINGS_MODEL_LLM_MODEL": "大语言模型",
   "SETTINGS_MODEL_IMAGE_PREVIEW": "预览图片",
-  "SETTINGS_MODEL_SAFE_CHECK": "敏感内容检测(仅对SD 1.5模型有效)",
+  "SETTINGS_MODEL_SAFE_CHECK": "敏感内容检测",
   "SETTINGS_MODEL_IMAGE_MODEL": "生图模型",
   "SETTINGS_MODEL_INPAINT_MODEL": "重绘/扩图模型",
   "SETTINGS_MODEL_IMAGE_WIDTH": "宽度",
@@ -80,10 +85,13 @@
   "SETTINGS_MODEL_IMAGE_CFG": "提示词引导强度(CFG)",
   "SETTINGS_MODEL_LORA": "Lora",
   "SETTINGS_MODEL_SCHEDULER": "采样器",
-  "SETTINGS_MODEL_LIST_CHANGE_TIP": "模型列表的变更导致您的某些设置被修改。请参阅基本设置以获取更多信息。",
+  "SETTINGS_MODEL_LIST_CHANGE_TIP": "模型列表的更改导致了一些设置的修改。请参考基本设置以获取更多信息。",
   "SETTINGS_BASIC_LANGUAGE": "语言",
   "SETTINGS_BASIC_PATHS": "路径",
   "SETTINGS_BASIC_LLM_CHECKPOINTS": "大语言模型路径",
+  "SETTINGS_BASIC_GENERAL": "通用设置",
+  "SETTINGS_BASIC_DEVICES": "设备",
+  "SETTINGS_BASIC_BACKEND": "后端",
   "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
   "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API 令牌",
   "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "请输入有效的令牌 (hf_***)",
@@ -97,10 +105,9 @@
   "SETTINGS_MODEL_SD_STANDARD_INPAINT_MODEL": "标准重绘/扩图模型",
   "SETTINGS_MODEL_SD_HD_MODEL": "预设高清模型",
   "SETTINGS_MODEL_RAG_MODEL": "检索增强生成(RAG)模型",
-  "SETTINGS_MODEL_BACKEND": "推理后端",
   "SETTINGS_BACKEND_STATUS": "后端状态",
   "SETTINGS_MODEL_MANAGE_BACKEND": "管理后端组件",
-  "SETTINGS_MODEL_EXIST": "模型已存在，无需重复下载。",
+  "SETTINGS_MODEL_EXIST": "模型已存在，无需重复下载",
   "SETTINGS_MODEL_DOWNLOAD": "下载模型",
   "SETTINGS_MODEL_DOWNLOAD_DESC": "以下是可以在 AI Playground 中执行各种 AI 任务的模型列表。在下载和使用之前，请查看每个模型的许可条款。也可以通过更改上面的模型路径和默认值，选择添加其他模型来源。",
   "TAB_CREATE": "创作",
@@ -128,71 +135,73 @@
   "ENHANCE_OUTPAINT_DIRECTION": "扩图方向",
   "ENHANCE_PREVIEW_BEFORE_PROCESS": "处理前",
   "ENHANCE_PREVIEW_AFTER_PROCESS": "处理后",
-  "ENHANCE_IMAGE_PROMPT_TIP": "描述您期望图像的风格化方式。包括您希望保留的原始图像描述以及您希望有所不同的描述。调整影响强度滑块以增加或减少提示对结果的影响程度。",
-  "ENHANCE_INPAINT_TIP": "使用画笔工具绘制一个遮罩区域。在提示中描述您想要修复或填充的内容。选择修复或填充选项，然后调整提示对结果的影响程度。",
-  "ENHANCE_OUTPAINT_TIP": "选择您要扩图的方向，按需调整强度，并在文本框中输入提示词。将生成扩展后的图片。",
-  "ENHANCE_UPSCALE_TIP": "上传需要处理的图像，选择放大倍数，调整放大过程中的重绘强度（如果小于0.1，图像内容不会改变，但尺寸仍会放大），在文本框中输入提示词用来引导生成放大的图像。",
+  "ENHANCE_IMAGE_PROMPT_TIP": "描述您期望图像的风格化方式。包括您希望保留的原始图像描述以及您希望有所不同的描述。调整影响强度滑块以增加或减少提示对结果的影响程度",
+  "ENHANCE_INPAINT_TIP": "使用画笔工具绘制一个遮罩区域。在提示中描述您想要修复或填充的内容。选择修复或填充选项，然后调整提示对结果的影响程度",
+  "ENHANCE_OUTPAINT_TIP": "选择您要扩图的方向，按需调整强度，并在文本框中输入提示词。将生成扩展后的图片",
+  "ENHANCE_UPSCALE_TIP": "上传需要处理的图像，选择放大倍数，调整放大过程中的重绘强度（如果小于0.1，图像内容不会改变，但尺寸仍会放大），在文本框中输入提示词用来引导生成放大的图像",
   "ERROR_UNSUPPORTED_IMAGE_TYPE": "仅支持 PNG, JPG, GIF, BMP 图片格式",
   "ANSWER_USER_NAME": "您",
   "ANSWER_AI_NAME": "Playground",
+  "ANSWER_NEW_CONVERSATION": "新对话",
   "ANSWER_ERROR_NOT_PROMPT": "请输入您的问题",
   "ANSWER_ERROR_CLEAR_SESSION": "清空聊天记录",
   "INCREASE_FONT_SIZE": "增大字体",
   "DECREASE_FONT_SIZE": "减小字体",
   "ANSWER_RAG_ENABLE": "启用文件检索增强(RAG)",
   "ANSWER_RAG_OPEN_DIALOG": "上传文件",
-  "REQUEST_LLM_MODEL_NAME": "添加一个来自 huggingface.co 的模型",
-  "REQUEST_LLM_MODEL_DESCRIPTION": "您可以安装以下格式下载模型仓库：",
-  "REQUEST_LLM_MODEL_EXAMPLE": "<作者名>/<仓库名>, 例如 'facebook/opt-1.3b'",
-  "REQUEST_LLM_SINGLE_EXAMPLE": "<作者名>/<仓库名>/<文件名>, 例如 'microsoft/Phi-3-mini-4k-instruct-gguf/Phi-3-mini-4k-instruct-q4.gguf'",
-  "REQUEST_LLM_MODEL_DISCLAIMER_1": "注意: 并非所有 huggingface.co 上的模型都完全适合您想执行的任务。",
-  "REQUEST_LLM_MODEL_DISCLAIMER_2": "请在下载前仔细阅读模型介绍及其要求。",
-  "DOWNLOADER_CONFRIM_TIP": "您缺少运行所需的一个或多个模型。您想下载以下模型吗？",
+  "REQUEST_LLM_MODEL_NAME": "从 huggingface.co 添加您选择的模型",
+  "REQUEST_LLM_MODEL_DESCRIPTION": "您可以使用以下语法下载模型仓库",
+  "REQUEST_LLM_MODEL_EXAMPLE": "<namespace>/<repo_name>，例如 'facebook/opt-1.3b'",
+  "REQUEST_LLM_SINGLE_EXAMPLE": "<namespace>/<repo_name>/<file_path>，例如 'microsoft/Phi-3-mini-4k-instruct-gguf/Phi-3-mini-4k-instruct-q4.gguf'",
+  "REQUEST_LLM_MODEL_DISCLAIMER_1": "请注意：并非 huggingface.co 上的所有模型都适合您要执行的任务。",
+  "REQUEST_LLM_MODEL_DISCLAIMER_2": "下载前请仔细阅读模型介绍和要求。",
+  "DOWNLOADER_CONFRIM_TIP": "缺少运行所需的一个或多个模型。是否要下载以下列出的模型？",
   "DOWNLOADER_MODEL": "模型",
   "DOWNLOADER_INFO": "信息",
-  "DOWNLOADER_FILE_SIZE": "文件大小",
-  "DOWNLOADER_GATED": "受限",
-  "DOWNLOADER_ACCESS_INFO_SINGLE": "您没有下载当前模型的访问权限。",
-  "DOWNLOADER_GATED_ACCEPT_SINGLE": "该模型为受限模型，请参阅模型简介页面并获取权限。",
-  "DOWNLOADER_ACCESS_ACCEPT_SINGLE": "无法下载受限模型。",
-  "DOWNLOADER_ACCESS_INFO": "您尝试下载的一些模型是受限的。",
-  "DOWNLOADER_GATED_TOKEN": "请在设置中添加您的huggingface.co API令牌。",
-  "DOWNLOADER_GATED_ACCEPT": "请确保访问模型信息页面并请求访问权限。如果您未被授予受限模型的访问权限，下载将会失败。",
-  "DOWNLOADER_ACCESS_ACCEPT": "无法下载受限模型。",
-  "DOWNLOADER_REASON": "用途",
-  "DOWNLOADER_TERMS": "跳转",
-  "DOWNLOADER_CONFLICT": "当前有另一个下载任务正在进行，无法启动新任务。您可以取消当前下载任务并启动新下载任务。",
-  "DOWNLOADER_TERMS_TIP": "我已阅读模型详细信息和许可证。我已同意所有条款和条件，并希望下载第三方模型。",
-  "DOWNLOADER_FOR_ANSWER_GENERATE": "回答模型",
+  "DOWNLOADER_FILE_SIZE": "大小",
+  "DOWNLOADER_GATED": "访问受限",
+  "DOWNLOADER_GATED_TOKEN": "请检查您是否在设置中添加了有效的 huggingface.co API 令牌。",
+  "DOWNLOADER_ACCESS_INFO_SINGLE": "您无权访问要下载的模型",
+  "DOWNLOADER_GATED_ACCEPT_SINGLE": "该模型需要授权访问。请访问模型信息页面并申请访问权限。",
+  "DOWNLOADER_ACCESS_ACCEPT_SINGLE": "无法下载无权访问的模型。",
+  "DOWNLOADER_ACCESS_INFO": "您无权访问某些要下载的模型",
+  "DOWNLOADER_GATED_ACCEPT": "部分模型需要授权访问。请访问模型信息页面并申请访问权限。",
+  "DOWNLOADER_ACCESS_ACCEPT": "无权访问的模型将不会被下载。",
+  "DOWNLOADER_REASON": "类型",
+  "DOWNLOADER_TERMS": "访问",
+  "DOWNLOADER_LICENSE": "许可",
+  "DOWNLOADER_CONFLICT": "当前有其他下载任务正在进行，无法启动新的下载任务。您可以取消当前的下载任务并启动新的下载任务",
+  "DOWNLOADER_TERMS_TIP": "我已阅读模型说明和许可证。我同意所有条款和条件，并希望下载第三方模型。",
+  "DOWNLOADER_FOR_ANSWER_GENERATE": "问答模型",
   "DOWNLOADER_FOR_RAG_QUERY": "RAG 嵌入模型",
-  "DOWNLOADER_FOR_IMAGE_GENERATE": "生图模型",
+  "DOWNLOADER_FOR_IMAGE_GENERATE": "图像生成模型",
   "DOWNLOADER_FOR_INAPINT_GENERATE": "重绘/扩图模型",
-  "DOWNLOADER_FOR_IMAGE_PREVIEW": "图片预览模型",
-  "DOWNLOADER_FOR_IMAGE_UPSCALE": "图片放大模型",
-  "DOWNLOADER_FOR_IMAGE_LORA": "极速生图模型",
+  "DOWNLOADER_FOR_IMAGE_PREVIEW": "图像预览模型",
+  "DOWNLOADER_FOR_IMAGE_UPSCALE": "图像放大模型",
+  "DOWNLOADER_FOR_IMAGE_LORA": "快速图像模型",
   "DOWNLOADER_DONWLOAD_TASK_PROGRESS": "模型下载完成",
   "RAG_FILE_TOTAL_FORMAT": "文件数量：{total}",
   "RAG_DRAG_UPLOAD": "将需要上传的文件拖动至此",
-  "RAG_DRAG_UPLOAD_UNSUPPORTED": "当前程序以管理员权限启动。由于Windows UAC限制，无法使用拖拽上传功能。请使用顶部的添加按钮上传文件。",
-  "RAG_UPLOAD_MIME_TYPE": "支持的文件类型\n\t文本文件：.txt .md\n\t办公文档：.doc(x)\n\tPDF文件：.pdf",
+  "RAG_DRAG_UPLOAD_UNSUPPORTED": "当前程序以管理员权限运行。由于Windows UAC限制，无法使用拖拽上传功能。请使用顶部的添加按钮上传文件",
+  "RAG_UPLOAD_MIME_TYPE": "支持的文件类型：\n\t文本文件：.txt .md\n\t办公文档：.doc(x)\n\tPDF文件：.pdf",
   "RAG_ENABLE_TIP": "仅根据上传的文档生成回答",
-  "RAG_UPLOAD_TYPE_ERROR": "上传的文件中有不支持的文件类型，已自动忽略。",
-  "RAG_UPLOAD_FILE_EXISTS": "上传的文件 {filename} 已存在。",
-  "RAG_ANALYZE_FILE_FAILED": "分析文件 {filename} 失败！",
-  "RAG_USE_REJECT": "未上传文件，请先上传文件。",
-  "RAG_WHEN_CLOSE_PANEL_AT_UPLODING": "请等待所有文档分析完毕。",
+  "RAG_UPLOAD_TYPE_ERROR": "上传的文件中有不支持的文件类型，已自动忽略",
+  "RAG_UPLOAD_FILE_EXISTS": "上传的文件 {filename} 已存在",
+  "RAG_ANALYZE_FILE_FAILED": "分析文件 {filename} 失败",
+  "RAG_USE_REJECT": "未上传文件，请先上传文件",
+  "RAG_WHEN_CLOSE_PANEL_AT_UPLODING": "请等待所有文档分析完毕",
   "RAG_SOURCE": "来源：",
-  "ERR_NOT_ENOUGH_DISK_SPACE": "磁盘空间不足。需要 {requires_space}，但只有 {free_space} 可用空间。",
+  "ERR_NOT_ENOUGH_DISK_SPACE": "磁盘空间不足。需要 {requires_space}，但只有 {free_space} 可用空间",
   "ERR_DOWNLOAD_FAILED": "模型下载失败",
-  "ERROR_RUNTIME_ERROR": "如果发生严重报错，请重新启动程序并重试。",
-  "ERROR_GENERATE_UNKONW_EXCEPTION": "发生未知错误。模型生成失败。",
+  "ERROR_RUNTIME_ERROR": "如果发生严重报错，请重新启动程序并重试",
+  "ERROR_GENERATE_UNKONW_EXCEPTION": "发生未知错误。模型生成失败",
   "ERROR_FOLDER_NOT_EXISTS": "指定的文件夹不存在",
   "ERROR_REPO_NOT_EXISTS": "指定的仓库不存在",
   "ERROR_ALREADY_IN_MODELS": "模型已存在",
   "ERROR_ENHANCE_IMAGE_NOT_SET": "请设置输入图片",
-  "ERROR_UNFOUND_GRAPHICS": "如果未检测到运行此程序所需的硬件，点击确定后程序将终止。",
+  "ERROR_UNFOUND_GRAPHICS": "如果未检测到运行此程序所需的硬件，点击确定后程序将终止",
   "ERROR_PYTHON_BACKEND_INIT": "后端初始化失败",
-  "ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "AI 后端初始化失败。请尝试重新启动应用程序。如果问题仍然存在，您可以查看详细信息以获取有关错误的更多信息。",
+  "ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "AI 后端初始化失败。请尝试重新启动应用程序。如果问题仍然存在，您可以查看详细信息以获取有关错误的更多信息",
   "ERROR_PYTHON_BACKEND_INIT_DETAILS": "详细信息",
   "ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "打开日志",
   "WARNING_MODEL_TYPE_WRONG": "模型类型似乎不符合要求。是否继续？",
@@ -205,7 +214,33 @@
   "BACKEND_INFORMATION": "详情",
   "BACKEND_ENABLE": "启用 *",
   "BACKEND_ACTION": "操作",
-  "BACKEND_REQUIRED_COMPONENTS_MESSAGE": "您需要安装额外组件以继续运行 Intel AI Playground。请确保您的网络稳定畅通。",
-  "BACKEND_OPTIONAL_COMPONENTS_MESSAGE": "可选组件不是必需的，但会提供额外功能。如果您希望使用可选组件，请先点击详情按钮知悉其使用协议及条款。",
-  "BACKEND_TERMS_AND_CONDITIONS": "* 我已查阅相关组件的详细信息，并同意其所有使用协议及条款，同意下载并在必要时激活第三方组件。"
+  "BACKEND_REQUIRED": "必需",
+  "BACKEND_OPTIONAL": "可选",
+  "BACKEND_REQUIRED_COMPONENTS_MESSAGE": "您需要安装额外组件以继续运行 Intel AI Playground。请确保您的网络稳定畅通",
+  "BACKEND_OPTIONAL_COMPONENTS_MESSAGE": "可选组件不是必需的，但会提供额外功能。如果您希望使用可选组件，请先点击详情按钮知悉其使用协议及条款",
+  "BACKEND_TERMS_AND_CONDITIONS": "* 我已查阅相关组件的详细信息，并同意其所有使用协议及条款，同意下载并在必要时激活第三方组件",
+  "BACKEND_STATUS_RUNNING": "运行中",
+  "BACKEND_STATUS_STOPPING": "停止中",
+  "BACKEND_STATUS_STARTING": "启动中",
+  "BACKEND_STATUS_INSTALLED": "已安装",
+  "BACKEND_STATUS_NOT_INSTALLED": "未安装",
+  "BACKEND_STATUS_INSTALLING": "安装中",
+  "BACKEND_STATUS_FAILED": "失败",
+  "SETTINGS_IMAGE_MODE": "模式",
+  "SETTINGS_IMAGE_WORKFLOW": "工作流",
+  "SETTINGS_IMAGE_DEFAULT": "默认",
+  "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "参考图片",
+  "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "文件名前缀",
+  "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - 低阈值",
+  "SETTINGS_IMAGE_COMFY_CANNY_HIGH_THRESHOLD": "Canny - 高阈值",
+  "SETTINGS_IMAGE_COMFY_ACTIVATE_FACESWAP": "启用换脸",
+  "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "原始图片",
+  "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "ControlNet - 强度",
+  "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "新面部图片",
+  "WORKFLOW_RELOAD_INFO": "从磁盘重新加载工作流",
+  "WORKFLOW_DOWNLOAD_INFO": "下载最新工作流并备份现有工作流",
+  "WORKFLOW_HIGH_VRAM_INFO": "此模型需要大量显存。如果遇到性能问题，请降低分辨率或重启ComfyUI后端",
+  "WORKFLOW_HIGH_VRAM_WARNING": "需要大量显存",
+  "LOADING_VERIFYING_BACKENDS": "验证后端",
+  "LOADING_AI_PLAYGROUND_LOADING": "AI Playground 加载中"
 }
