--- a/WebUI/src/assets/i18n/zh-TW.json
+++ b/WebUI/src/assets/i18n/zh-TW.json
@@ -3,10 +3,13 @@
   "COM_SETTINGS": "設定",
   "COM_MINI": "最小化",
   "COM_CLOSE": "關閉",
+  "COM_ADD": "新增",
   "COM_RESTORE": "回復預設",
   "COM_SD_PROMPT": "輸入提示詞以產生圖片",
   "COM_LLM_PROMPT": "輸入提示詞以產生回答",
-  "COM_CLICK_UPLOAD": "- 上傳圖片 -",
+  "COM_LLM_HF_PROMPT": "<namespace>/<repo_name>",
+  "COM_LLM_HF_PROMPT_GGUF": "<namespace>/<repo_name>/<file_path>",
+  "COM_CLICK_UPLOAD": "- 點擊上傳圖片 -",
   "COM_GENERATE": "生成",
   "COM_GENERATING": "生成中",
   "COM_HISTORY": "歷史紀錄",
@@ -17,44 +20,64 @@
   "COM_APPLY": "套用",
   "COM_DOWNLOAD": "下載",
   "COM_REGENERATE": "重新生成",
+  "COM_RESTART": "重新啟動",
+  "COM_START": "開始",
   "COM_DELETE": "刪除",
+  "COM_LOAD_IMAGE": "載入圖片",
   "COM_DOWNLOAD_MODEL": "模型下載中",
   "COM_DOWNLOAD_SPEED": "下載速度",
   "COM_LOADING_MODEL": "模型載入中",
   "COM_LOADING_MODEL_COMPONENTS": "模型套件載入中",
-  "COM_NO_SELECTED": "無選取物件",
+  "COM_NO_SELECTED": "無選取項目",
   "COM_CONFIRM": "確認",
   "COM_CANCEL": "取消",
   "COM_VISIT": "瀏覽",
   "COM_REQUESTING": "請求中",
   "COM_DEFAULT": "預設",
   "COM_STOP": "停止",
-  "COM_OPEN_LOCATION": "開啟文件所在位置",
+  "COM_DEBUG": "開啟開發者日誌",
+  "COM_OPEN_LOCATION": "開啟檔案位置",
   "COM_OPEN_PARAMS": "參數資訊",
   "COM_LOW": "低",
   "COM_HIGH": "高",
   "COM_FULLSCREEN": "全螢幕",
-  "COM_FULLSCREEN_EXIT": "解除全螢幕",
+  "COM_FULLSCREEN_EXIT": "退出全螢幕",
+  "COM_DO_NOT_SHOW_AGAIN": "不再顯示",
+  "COM_INSTALL": "安裝",
+  "COM_INSTALL_ALL": "安裝/修復所選項目",
+  "COM_REPAIR": "修復",
+  "COM_CONTINUE": "繼續",
+  "COM_GO_TO_SETUP": "前往設定",
+  "COM_LOAD_WORKFLOW_DEFAULTS": "載入工作流程預設值",
+  "SETTINGS_THEME": "主題",
+  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "高解析度模式可能導致性能下降，特別是在顯示記憶體小於12GB或系統記憶體小於24GB的 Intel Core Ultra 處理器電腦上",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_CONFIRM": "工作流程模式需要安裝 ComfyUI。這是可以在 AI Playground 設定中安裝的選用組件",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_DOWNLOADING": "安裝進行中...",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_COMPLETED": "安裝成功！",
+  "SETTINGS_MODEL_WORKFLOW_COMFYUI_ERROR": "安裝失敗，原因：",
+  "SETTINGS_TAB_IMAGE": "圖片",
   "SETTINGS_TAB_BASIC": "基本設定",
   "SETTINGS_TAB_MODEL": "模型",
   "SETTINGS_INFERENCE_DEVICE": "推論裝置",
-  "SETTINGS_MODEL_IMAGE_RESOLUTION": "圖像生成解析度",
+  "SETTINGS_LLM_BACKEND": "LLM後端",
+  "SETTINGS_MODEL_IMAGE_SIZE": "圖片尺寸",
+  "SETTINGS_MODEL_IMAGE_RESOLUTION": "圖像解析度",
   "SETTINGS_MODEL_IMAGE_RESOLUTION_STANDARD": "標準",
-  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD": "高解析",
-  "SETTINGS_MODEL_QUALITY": "圖像生成畫質",
-  "SETTINGS_MODEL_QUALITY_STANDARD": "標準畫質",
-  "SETTINGS_MODEL_QUALITY_HIGH": "高畫質",
+  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD": "高解析度",
+  "SETTINGS_MODEL_QUALITY": "生成品質",
+  "SETTINGS_MODEL_QUALITY_STANDARD": "標準",
+  "SETTINGS_MODEL_QUALITY_HIGH": "高品質",
   "SETTINGS_MODEL_QUALITY_FAST": "極速",
-  "SETTINGS_MODEL_QUALITY_MANUAL": "自訂",
-  "SETTINGS_MODEL_ADJUSTABLE_OPTIONS": "可自訂選項",
-  "SETTINGS_MODEL_MANUAL_OPTIONS": "自訂選項",
+  "SETTINGS_MODEL_QUALITY_MANUAL": "手動",
+  "SETTINGS_MODEL_ADJUSTABLE_OPTIONS": "可調整選項",
+  "SETTINGS_MODEL_MANUAL_OPTIONS": "手動選項",
   "SETTINGS_MODEL_NEGATIVE_PROMPT": "負向提示詞",
   "SETTINGS_MODEL_SEED": "亂數種子",
-  "SETTINGS_MODEL_GENERATE_NUMBER": "圖像生成數目",
+  "SETTINGS_MODEL_GENERATE_NUMBER": "生成圖片數量",
   "SETTINGS_MODEL_LLM_MODEL": "大語言模型",
-  "SETTINGS_MODEL_IMAGE_PREVIEW": "生成圖像預覽",
-  "SETTINGS_MODEL_SAFE_CHECK": "敏感內容檢查(只對SD 1.5生效)",
-  "SETTINGS_MODEL_IMAGE_MODEL": "圖像生成模型",
+  "SETTINGS_MODEL_IMAGE_PREVIEW": "圖片預覽",
+  "SETTINGS_MODEL_SAFE_CHECK": "敏感內容檢查",
+  "SETTINGS_MODEL_IMAGE_MODEL": "圖像模型",
   "SETTINGS_MODEL_INPAINT_MODEL": "局部重繪/邊緣擴繪模型",
   "SETTINGS_MODEL_IMAGE_WIDTH": "寬度",
   "SETTINGS_MODEL_IMAGE_HEIGHT": "高度",
@@ -62,107 +85,162 @@
   "SETTINGS_MODEL_IMAGE_CFG": "提示詞引導強度(CFG)",
   "SETTINGS_MODEL_LORA": "Lora",
   "SETTINGS_MODEL_SCHEDULER": "排程器",
-  "SETTINGS_MODEL_LIST_CHANGE_TIP": "您的某些設定已被調整來符合模型清單中的變化，如需了解進一步訊息，請參閱基本設定說明。",
+  "SETTINGS_MODEL_LIST_CHANGE_TIP": "模型清單的變更導致部分設定被修改。請參考基本設定以獲取更多資訊",
   "SETTINGS_BASIC_LANGUAGE": "語言",
   "SETTINGS_BASIC_PATHS": "路徑",
   "SETTINGS_BASIC_LLM_CHECKPOINTS": "大語言模型路徑",
-  "SETTINGS_MODEL_SD_CHECKPOINTS": "圖像生成模型路徑",
+  "SETTINGS_BASIC_GENERAL": "一般設定",
+  "SETTINGS_BASIC_DEVICES": "裝置",
+  "SETTINGS_BASIC_BACKEND": "後端",
+  "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
+  "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API Token",
+  "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "請輸入有效的 Token (hf_***)",
+  "SETTINGS_MODEL_SD_CHECKPOINTS": "圖像模型路徑",
   "SETTINGS_MODEL_SD_INPAINT_CHECKPOINTS": "局部重繪模型路徑",
-  "SETTINGS_MODEL_SD_VAE": "Vae 路徑",
-  "SETTINGS_MODEL_SD_LORA": "Lora 路徑",
-  "SETTINGS_MODEL_SD_SCHEDULER": "Scheduler 路徑",
-  "SETTINGS_MODEL_SD_PRESET_MODEL": "圖片生成預設模型",
-  "SETTINGS_MODEL_SD_STANDARD_MODEL": "標準畫質預設模型",
-  "SETTINGS_MODEL_SD_STANDARD_INPAINT_MODEL": "標準畫質 局部重繪/邊緣擴繪預設模型",
-  "SETTINGS_MODEL_SD_HD_MODEL": "高畫質圖像生成預設模型",
-  "SETTINGS_MODEL_RAG_MODEL": "增強檢索模型",
-  "SETTINGS_MODEL_EXIST": "模型已存在",
+  "SETTINGS_MODEL_SD_VAE": "VAE路徑",
+  "SETTINGS_MODEL_SD_LORA": "Lora路徑",
+  "SETTINGS_MODEL_SD_SCHEDULER": "排程器路徑",
+  "SETTINGS_MODEL_SD_PRESET_MODEL": "預設圖像模型",
+  "SETTINGS_MODEL_SD_STANDARD_MODEL": "標準預設模型",
+  "SETTINGS_MODEL_SD_STANDARD_INPAINT_MODEL": "標準局部重繪/邊緣擴繪預設模型",
+  "SETTINGS_MODEL_SD_HD_MODEL": "高解析度預設模型",
+  "SETTINGS_MODEL_RAG_MODEL": "RAG查詢模型",
+  "SETTINGS_BACKEND_STATUS": "後端狀態",
+  "SETTINGS_MODEL_MANAGE_BACKEND": "管理後端組件",
+  "SETTINGS_MODEL_EXIST": "模型已存在，無需重複下載",
   "SETTINGS_MODEL_DOWNLOAD": "下載模型",
-  "SETTINGS_MODEL_DOWNLOAD_DESC": "以下是可以在AI Playground中執行各種AI任務的模型清單。請在下載和使用模型前詳閱其使用條款。也可以透過更改上方模型路徑和預設值，選擇添加其他模型來源。",
+  "SETTINGS_MODEL_DOWNLOAD_DESC": "以下是可以在AI Playground中執行各種AI任務的模型清單。請在下載和使用前詳閱每個模型的使用條款。您也可以透過更改上方的模型路徑和預設值，選擇添加其他模型來源",
   "TAB_CREATE": "創作",
   "TAB_ENHANCE": "增強",
   "TAB_ANSWER": "對話",
   "TAB_LEARN_MORE": "了解更多",
-  "ENHANCE_INPUT_IMAGE_REQUIRED": "請在生成前選取輸入圖片",
-  "ENHANCE_UPSCALE": "無損放大",
-  "ENHANCE_IMAGE_PROMPT": "以圖生圖",
+  "ENHANCE_INPUT_IMAGE_REQUIRED": "請在生成前設定輸入圖片",
+  "ENHANCE_UPSCALE": "放大",
+  "ENHANCE_IMAGE_PROMPT": "圖像提示詞",
   "ENHANCE_INPAINT": "局部重繪",
   "ENHANCE_OUTPAINT": "邊緣擴繪",
   "ENHANCE_UPSCALE_SCALE": "放大倍率",
-  "ENHANCE_UPSCALE_SCALE_X1_5": "放大(1.5X)",
-  "ENHANCE_UPSCALE_SCALE_X2_0": "放大(2.0X)",
-  "ENHANCE_UPSCALE_VARIATION": "變化度",
-  "ENHANCE_UPSCALE_VARIATION_NONE": "None",
+  "ENHANCE_UPSCALE_SCALE_X1_5": "放大(1.5倍)",
+  "ENHANCE_UPSCALE_SCALE_X2_0": "放大(2.0倍)",
+  "ENHANCE_UPSCALE_VARIATION": "變化程度",
+  "ENHANCE_UPSCALE_VARIATION_NONE": "無",
   "ENHANCE_UPSCALE_VARIATION_DISABLE": "輕微",
   "ENHANCE_UPSCALE_VARIATION_STRONG": "強烈",
   "ENHANCE_INPAINT_TYPE": "類型",
   "ENHANCE_INPAINT_FILL": "生成新內容填充",
   "ENHANCE_INPAINT_FIX": "修復遮罩區域",
-  "ENHANCE_INPAINT_MASK_REQUIRED": "請在生成之前繪製遮罩區域",
-  "ENHANCE_INPAINT_USE_IMAGE_MODEL": "使用圖像生成模型",
-  "ENHANCE_COM_DENOISE": "影響程度",
+  "ENHANCE_INPAINT_MASK_REQUIRED": "請在生成前繪製遮罩區域",
+  "ENHANCE_INPAINT_USE_IMAGE_MODEL": "使用目前圖像模型",
+  "ENHANCE_COM_DENOISE": "影響強度",
   "ENHANCE_OUTPAINT_DIRECTION": "擴繪方向",
   "ENHANCE_PREVIEW_BEFORE_PROCESS": "處理前",
   "ENHANCE_PREVIEW_AFTER_PROCESS": "處理後",
-  "ENHANCE_IMAGE_PROMPT_TIP": "描述您想要圖像風格化的方式。包含描述您想保留的原圖部分以及想更改的部分。調整影響程度滑桿以增加或減少提示詞對結果的影響。",
-  "ENHANCE_INPAINT_TIP": "使用畫筆工具遮罩區域。在提示詞中描述您想修復或填充的內容，選擇修復或填充選項，然後調整提示詞對結果的影響程度。",
-  "ENHANCE_OUTPAINT_TIP": "選擇擴展的方向，根據需要調整去噪值，並在文本框中輸入提示詞。擴展後的圖像將會生成。",
-  "ENHANCE_UPSCALE_TIP": "上傳需要操作的圖片，選擇放大倍率，調整去噪幅度（如果小於0.1，圖像內容不會改變，但尺寸仍然會放大），在文本框中輸入提示詞來生成放大的圖像。",
-  "ERROR_UNSUPPORTED_IMAGE_TYPE": "僅支援PNG、JPG、GIF和BMP圖像格式",
+  "ENHANCE_IMAGE_PROMPT_TIP": "描述您希望圖像如何風格化。包含您想保留的原始圖像描述以及您希望改變的部分。調整影響強度滑桿以增加或減少提示詞對結果的影響程度",
+  "ENHANCE_INPAINT_TIP": "使用畫筆工具繪製遮罩區域。在提示詞中描述您想要修復或填充的內容。選擇修復或填充選項，然後調整提示詞對結果的影響程度",
+  "ENHANCE_OUTPAINT_TIP": "選擇您要擴繪的方向，按需調整強度，並在文字框中輸入提示詞。將生成擴展後的圖片",
+  "ENHANCE_UPSCALE_TIP": "上傳需要處理的圖片，選擇放大倍率，調整放大過程中的重繪強度（如果小於0.1，圖像內容不會改變，但尺寸仍會放大），在文字框中輸入提示詞用來引導生成放大的圖像",
+  "ERROR_UNSUPPORTED_IMAGE_TYPE": "僅支援PNG、JPG、GIF和BMP圖片格式",
   "ANSWER_USER_NAME": "您",
   "ANSWER_AI_NAME": "Playground",
+  "ANSWER_NEW_CONVERSATION": "新對話",
   "ANSWER_ERROR_NOT_PROMPT": "請輸入提示詞",
   "ANSWER_ERROR_CLEAR_SESSION": "清除對話紀錄",
-  "ANSWER_RAG_ENABLE": "開啟文件增強檢索(RAG)",
+  "INCREASE_FONT_SIZE": "放大字體",
+  "DECREASE_FONT_SIZE": "縮小字體",
+  "ANSWER_RAG_ENABLE": "啟用文件檢索增強(RAG)",
   "ANSWER_RAG_OPEN_DIALOG": "上傳文件",
-  "DOWNLOADER_CONFRIM_TIP": "您缺少運行所需的一個或多個模型。 您想下載以下模型嗎?",
+  "REQUEST_LLM_MODEL_NAME": "從huggingface.co添加您選擇的模型",
+  "REQUEST_LLM_MODEL_DESCRIPTION": "您可以使用以下語法下載模型存儲庫",
+  "REQUEST_LLM_MODEL_EXAMPLE": "<namespace>/<repo_name>，例如 'facebook/opt-1.3b'",
+  "REQUEST_LLM_SINGLE_EXAMPLE": "<namespace>/<repo_name>/<file_path>，例如 'microsoft/Phi-3-mini-4k-instruct-gguf/Phi-3-mini-4k-instruct-q4.gguf'",
+  "REQUEST_LLM_MODEL_DISCLAIMER_1": "注意：並非huggingface.co上的每個模型都適合您要執行的任務",
+  "REQUEST_LLM_MODEL_DISCLAIMER_2": "下載前請仔細閱讀模型介紹和要求",
+  "DOWNLOADER_CONFRIM_TIP": "缺少運行所需的一個或多個模型。是否要下載以下列出的模型？",
   "DOWNLOADER_MODEL": "模型",
-  "DOWNLOADER_INFO": "訊息",
-  "DOWNLOADER_FILE_SIZE": "文件大小",
-  "DOWNLOADER_REASON": "用途",
+  "DOWNLOADER_INFO": "資訊",
+  "DOWNLOADER_FILE_SIZE": "檔案大小",
+  "DOWNLOADER_GATED": "存取受限",
+  "DOWNLOADER_GATED_TOKEN": "請檢查您是否在設定中添加了有效的 huggingface.co API Token",
+  "DOWNLOADER_ACCESS_INFO_SINGLE": "您無權存取要下載的模型",
+  "DOWNLOADER_GATED_ACCEPT_SINGLE": "該模型需要授權存取。請瀏覽模型資訊頁面並申請存取權限",
+  "DOWNLOADER_ACCESS_ACCEPT_SINGLE": "無法下載無權存取的模型",
+  "DOWNLOADER_ACCESS_INFO": "您無權存取某些要下載的模型",
+  "DOWNLOADER_GATED_ACCEPT": "部分模型需要授權存取。請瀏覽模型資訊頁面並申請存取權限",
+  "DOWNLOADER_ACCESS_ACCEPT": "無權存取的模型將不會被下載",
+  "DOWNLOADER_REASON": "類型",
   "DOWNLOADER_TERMS": "瀏覽",
-  "DOWNLOADER_CONFLICT": "因目前已有下載任務執行中，無法開始新任務。您可以取消目前的任務後再開始新的下載任務",
-  "DOWNLOADER_TERMS_TIP": "我已閱讀模型詳細訊息和授權。我已同意所有條款與條件，並希望下載外部模型",
+  "DOWNLOADER_LICENSE": "授權條款",
+  "DOWNLOADER_CONFLICT": "當前有其他下載任務正在進行，無法啟動新的下載任務。您可以取消當前的下載任務並啟動新的下載任務",
+  "DOWNLOADER_TERMS_TIP": "我已閱讀模型說明和授權條款。我同意所有條款和條件，並希望下載第三方模型",
   "DOWNLOADER_FOR_ANSWER_GENERATE": "對話模型",
   "DOWNLOADER_FOR_RAG_QUERY": "RAG嵌入模型",
   "DOWNLOADER_FOR_IMAGE_GENERATE": "圖像生成模型",
   "DOWNLOADER_FOR_INAPINT_GENERATE": "局部重繪/邊緣擴繪模型",
-  "DOWNLOADER_FOR_IMAGE_PREVIEW": "生成圖像預覽模型",
-  "DOWNLOADER_FOR_IMAGE_UPSCALE": "無損放大模型",
-  "DOWNLOADER_FOR_IMAGE_LORA": "極速圖像生成模型",
+  "DOWNLOADER_FOR_IMAGE_PREVIEW": "圖像預覽模型",
+  "DOWNLOADER_FOR_IMAGE_UPSCALE": "圖像放大模型",
+  "DOWNLOADER_FOR_IMAGE_LORA": "快速圖像模型",
   "DOWNLOADER_DONWLOAD_TASK_PROGRESS": "模型下載完成",
-  "RAG_FILE_TOTAL_FORMAT": "文件總數: {total}",
-  "RAG_DRAG_UPLOAD": "將需要上傳的文件拖曳至此",
-  "RAG_DRAG_UPLOAD_UNSUPPORTED": "目前程式以管理員權限啟動。因Windows使用者帳戶控制下，無法使用直接拖曳檔案進行上傳。請點選上方按鈕來進行上傳",
-  "RAG_UPLOAD_MIME_TYPE": "支援的文件類型:\n\t文字檔案: .txt .md\n\tOffice檔案: .doc(x)\n\tPDF檔案: .pdf",
-  "RAG_ENABLE_TIP": "會已上傳的文件作為主要參考來進行回答",
-  "RAG_UPLOAD_TYPE_ERROR": "已自動排除上傳檔案中某些不支援格式檔案",
+  "RAG_FILE_TOTAL_FORMAT": "文件數量：{total}",
+  "RAG_DRAG_UPLOAD": "將需要上傳的文件拖動至此",
+  "RAG_DRAG_UPLOAD_UNSUPPORTED": "當前程式以管理員權限運行。由於Windows使用者帳戶控制限制，無法使用拖拽上傳功能。請使用頂部的新增按鈕上傳文件",
+  "RAG_UPLOAD_MIME_TYPE": "支援的文件類型：\n\t文字文件：.txt .md\n\t辦公文件：.doc(x)\n\tPDF文件：.pdf",
+  "RAG_ENABLE_TIP": "僅根據上傳的文件生成回答",
+  "RAG_UPLOAD_TYPE_ERROR": "上傳的文件中有不支援的文件類型，已自動忽略",
   "RAG_UPLOAD_FILE_EXISTS": "上傳的文件 {filename} 已存在",
-  "RAG_ANALYZE_FILE_FAILED": "文件 {filename} 解析失敗",
-  "RAG_USE_REJECT": "您的互動式檔案清單不存在，請先上傳文件。",
-  "RAG_WHEN_CLOSE_PANEL_AT_UPLODING": "請等待所有文件解析完畢",
-  "RAG_SOURCE": "文件來源:",
-  "ERR_NOT_ENOUGH_DISK_SPACE": "磁碟空間不足，尚需要 {requires_space}, 僅剩 {free_space} 可用空間",
+  "RAG_ANALYZE_FILE_FAILED": "分析文件 {filename} 失敗",
+  "RAG_USE_REJECT": "未上傳文件，請先上傳文件",
+  "RAG_WHEN_CLOSE_PANEL_AT_UPLODING": "請等待所有文件分析完畢",
+  "RAG_SOURCE": "來源：",
+  "ERR_NOT_ENOUGH_DISK_SPACE": "磁碟空間不足。需要 {requires_space}，但只有 {free_space} 可用空間",
   "ERR_DOWNLOAD_FAILED": "模型下載失敗",
-  "ERROR_RUNTIME_ERROR": "如有任何錯誤，請重啟程式並再試一次",
-  "ERROR_GENERATE_UNKONW_EXCEPTION": "因不明原因錯誤，無法透過模型生成內容",
-  "ERROR_FOLDER_NOT_EXISTS": "指定的檔案路徑不存在",
-  "ERROR_ENHANCE_IMAGE_NOT_SET": "請指定輸入的圖片",
-  "ERROR_UNFOUND_GRAPHICS": "如果在系統中未偵測到所需的硬體，程式將會在選擇OK後確認",
-  "COM_DO_NOT_SHOW_AGAIN": "不再顯示",
-  "SETTINGS_MODEL_IMAGE_RESOLUTION_HD_CONFIRM": "高解析度模式可能導致性能下降，特別是在視訊記憶體小於12GB或系統記憶體小於24GB的Intel Core Ultra PC上。",
-  "SETTINGS_MODEL_IMAGE_SIZE": "圖片尺寸",
-  "SETTINGS_MODEL_HUGGINGFACE": "Hugging Face",
-  "SETTINGS_MODEL_HUGGINGFACE_API_TOKEN": "API Token",
-  "SETTINGS_MODEL_HUGGINGFACE_INVALID_TOKEN_TEXT": "請輸入有效的Token (ht_***)",
-  "INCREASE_FONT_SIZE": "放大字體",
-  "DECREASE_FONT_SIZE": "縮小字體",
-  "DOWNLOADER_GATED": "受限制",
-  "DOWNLOADER_GATED_INFO": "您嘗試下載受限制的模型。",
-  "DOWNLOADER_GATED_TOKEN": "請在設定頁中新增您的 huggingface.co API token。",
-  "DOWNLOADER_GATED_ACCEPT": "請確保在瀏覽模型資訊頁面後並請求存取權限。如果您未被賦予受限制模型的存取權限，下載將會失敗。",
+  "ERROR_RUNTIME_ERROR": "如果發生嚴重錯誤，請重新啟動程式並重試",
+  "ERROR_GENERATE_UNKONW_EXCEPTION": "發生未知錯誤。模型生成失敗",
+  "ERROR_FOLDER_NOT_EXISTS": "指定的資料夾不存在",
+  "ERROR_REPO_NOT_EXISTS": "指定的存儲庫不存在",
+  "ERROR_ALREADY_IN_MODELS": "模型已存在",
+  "ERROR_ENHANCE_IMAGE_NOT_SET": "請設定輸入圖片",
+  "ERROR_UNFOUND_GRAPHICS": "如果未檢測到運行此程式所需的硬體，點擊確定後程式將終止",
   "ERROR_PYTHON_BACKEND_INIT": "後端初始化失敗",
-  "ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "AI後端初始化失敗，請嘗試重新啟動應用程式。如果問題依然存在，您可以查看詳細資訊以獲取有關錯誤的更多訊息。",
+  "ERROR_PYTHON_BACKEND_INIT_DETAILS_TEXT": "AI後端初始化失敗。請嘗試重新啟動應用程式。如果問題仍然存在，您可以查看詳細資訊以獲取有關錯誤的更多資訊",
   "ERROR_PYTHON_BACKEND_INIT_DETAILS": "詳細資訊",
-  "ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "開啟日誌"
+  "ERROR_PYTHON_BACKEND_INIT_OPEN_LOG": "開啟日誌",
+  "WARNING_MODEL_TYPE_WRONG": "模型類型似乎不符合要求。是否繼續？",
+  "BACKEND_MANAGE": "AI Playground 設定",
+  "BACKEND_REQUIRED_COMPONENTS": "必要組件",
+  "BACKEND_OPTIONAL_COMPONENTS": "選用組件",
+  "BACKEND_SINGLE_COMPONENT": "組件",
+  "BACKEND_TYPE": "類型",
+  "BACKEND_STATUS": "狀態",
+  "BACKEND_INFORMATION": "詳情",
+  "BACKEND_ENABLE": "啟用 *",
+  "BACKEND_ACTION": "操作",
+  "BACKEND_REQUIRED": "必需",
+  "BACKEND_OPTIONAL": "選用",
+  "BACKEND_REQUIRED_COMPONENTS_MESSAGE": "您需要安裝額外組件以繼續運行 Intel AI Playground。請確保您的網路穩定暢通",
+  "BACKEND_OPTIONAL_COMPONENTS_MESSAGE": "選用組件不是必需的，但會提供額外功能。如果您希望使用選用組件，請先點擊詳情按鈕知悉其使用協議及條款",
+  "BACKEND_TERMS_AND_CONDITIONS": "* 我已查閱相關組件的詳細資訊，並同意其所有使用協議及條款，同意下載並在必要時啟用第三方組件",
+  "BACKEND_STATUS_RUNNING": "運行中",
+  "BACKEND_STATUS_STOPPING": "停止中",
+  "BACKEND_STATUS_STARTING": "啟動中",
+  "BACKEND_STATUS_INSTALLED": "已安裝",
+  "BACKEND_STATUS_NOT_INSTALLED": "未安裝",
+  "BACKEND_STATUS_INSTALLING": "安裝中",
+  "BACKEND_STATUS_FAILED": "失敗",
+  "SETTINGS_IMAGE_MODE": "模式",
+  "SETTINGS_IMAGE_WORKFLOW": "工作流程",
+  "SETTINGS_IMAGE_DEFAULT": "預設",
+  "SETTINGS_IMAGE_COMFY_REFERENCE_IMAGE": "參考圖片",
+  "SETTINGS_IMAGE_COMFY_FILENAME_PREFIX": "檔案名稱前綴",
+  "SETTINGS_IMAGE_COMFY_CANNY_LOW_THRESHOLD": "Canny - 低閾值",
+  "SETTINGS_IMAGE_COMFY_CANNY_HIGH_THRESHOLD": "Canny - 高閾值",
+  "SETTINGS_IMAGE_COMFY_ACTIVATE_FACESWAP": "啟用換臉",
+  "SETTINGS_IMAGE_COMFY_ORIGINAL_IMAGE": "原始圖片",
+  "SETTINGS_IMAGE_COMFY_CONTROLNET_STRENGTH": "ControlNet - 強度",
+  "SETTINGS_IMAGE_COMFY_NEW_FACE_IMAGE": "新臉部圖片",
+  "WORKFLOW_RELOAD_INFO": "從磁碟重新載入工作流程",
+  "WORKFLOW_DOWNLOAD_INFO": "下載最新工作流程並備份現有工作流程",
+  "WORKFLOW_HIGH_VRAM_INFO": "此模型需要大量顯示記憶體。如果遇到效能問題，請降低解析度或重啟ComfyUI後端",
+  "WORKFLOW_HIGH_VRAM_WARNING": "需要大量顯示記憶體",
+  "LOADING_VERIFYING_BACKENDS": "驗證後端",
+  "LOADING_AI_PLAYGROUND_LOADING": "AI Playground 載入中"
 }
